*Empty MediaWiki Message*

--- a/ᏣᏥ_ᏩᏒᏓᎾ.mw
+++ b/ᏣᏥ_ᏩᏒᏓᎾ.mw
@@ -26,7 +26,7 @@
 |-
 |}
 
-<big>'''ᏣᏥ ᏩᏒᏓᎾ'''</big> ᎢᎬᏱ [[ᎠᎺᎵᎨ ᎤᏂᎬᏫᏳᎯ|ᎠᎺᎵᎨ ᎤᎬᏫᏳᎯ]] ᎨᏒᎢ.
+<big>'''ᏣᏥ ᏩᏒᏓᎾ'''</big> ([[ᏲᏁᎦ]]: ''George Washington''; ᎧᎦᎵ 22‚ 1732 – ᎥᏍᎩᏱ 14, 1799) ᎢᎬᏱ [[ᎠᎺᎵᎨ ᎤᏂᎬᏫᏳᎯ|ᎠᎺᎵᎨ ᎤᎬᏫᏳᎯ]] ᎨᏒᎢ.
 
 [[af:George Washington]]
 [[am:ጆርጅ ዋሽንግተን]]
