*Empty MediaWiki Message*

--- a/ᎠᎺᎵᎨ_ᎤᏂᎬᏫᏳᎯ.mw
+++ b/ᎠᎺᎵᎨ_ᎤᏂᎬᏫᏳᎯ.mw
@@ -429,8 +429,8 @@
 |- 
 | align=center | 53
 |- 
-| rowspan=2 | '''[[Nhiệm kỳ Tổng thống của George W. Bush|43]]'''
-| rowspan=2 | <big>[[ᏣᏥ Ꮹ. ᏊᏏ]]</big> <br> <small>'' '' <br> (1946– )</small>[[George W. Bush]]
+| rowspan=2 | '''43'''
+| rowspan=2 | <big>[[ᏣᏥ Ꮹ. ᏊᏏ]]</big> <br> <small>'' '' <br> (1946– )</small>
 | rowspan=2 | [[file:George-W-Bush.jpeg|100px]]
 | rowspan=2 | [[ᎤᏃᎸᏔᏅ 20]]‚ [[2001]]
 | rowspan=2 | [[ᎤᏃᎸᏔᏅ 20]]‚ [[2009]]
