--- a/ᏔᏘᏯᎾ_ᏊᎳᏃᏩ.mw
+++ b/ᏔᏘᏯᎾ_ᏊᎳᏃᏩ.mw
@@ -3,7 +3,7 @@
 | style="background:#f0e68c;" align="center" colspan=2 |
 {| border="0" cellpadding="1" cellspacing="0"
 |-
-| align="center" width="140px" | <big><big>'''ᏔᏘᏯᎾ ᏊᎳᏃᏩ'''</big></big>
+| align="center" width="140px" | <big><big><big>'''ᏔᏘᏯᎾ ᏊᎳᏃᏩ'''</big></big></big> <br> ''Tatyana Bulanova''
 |}
 |-
 | align=center colspan=2 | [[File:Tatjana_Bulanowa.jpg|200px]] <br> ᏔᏘᏯᎾ ᏊᎳᏃᏩ
