*Empty MediaWiki Message*

--- a/ᎠᎳ_ᏊᎦᏦᏩ.mw
+++ b/ᎠᎳ_ᏊᎦᏦᏩ.mw
@@ -3,7 +3,7 @@
 | style="background:#f0e68c;" align="center" colspan=2 |
 {| border="0" cellpadding="1" cellspacing="0"
 |-
-| align="center" width="140px" | <big><big>'''ᎠᎳ ᏊᎦᏦᏩ'''</big></big>
+| align="center" width="140px" | <big><big><big>'''ᎠᎳ ᏊᎦᏦᏩ'''</big></big></big> <br> ''Alla Pugachyova''
 |}
 |-
 | align=center colspan=2 | [[File:Dmitriy_Medvedev_with_Alla_Pugacheva.jpg|300px]] <br> [[ᏗᎻᏟ ᎺᏗᏪᏕᏫ]] ᎠᎴ ᎠᎳ ᏊᎦᏦᏩ
