*Empty MediaWiki Message*

--- a/ᏈᎵᎩ_ᎩᎵᎪᎶᏫ.mw
+++ b/ᏈᎵᎩ_ᎩᎵᎪᎶᏫ.mw
@@ -3,7 +3,7 @@
 | style="background:#f0e68c;" align="center" colspan=2 |
 {| border="0" cellpadding="1" cellspacing="0"
 |-
-| align="center" width="140px" | <big><big>'''ᏈᎵᎩ ᎩᎵᎪᎶᏫ'''</big></big>
+| align="center" width="200px" | <big><big><big>'''ᏈᎵᎩ ᎩᎵᎪᎶᏫ'''</big></big></big> <br> ''Philipp Kirkorov''
 |}
 |-
 | align=center colspan=2 | [[File:Philipp_Kirkorov.jpg|200px]] <br> ᏈᎵᎩ ᎩᎵᎪᎶᏫ
