*Empty MediaWiki Message*

--- a/ᏢᏓᏥᏧᎶᎸᏗ.mw
+++ b/ᏢᏓᏥᏧᎶᎸᏗ.mw
@@ -3,7 +3,7 @@
 | style="background:#D3D3A4;" align="center" colspan=2 |
 {| border="0" cellpadding="1" cellspacing="0"
 |-
-| align="center" width="140px" | <big><big>'''ᏢᏓᏥ ᏧᎶᎸᏗ'''</big></big>
+| align="center" width="200px" | <big><big><big>'''ᏢᏓᏥ ᏧᎶᎸᏗ'''</big></big></big> <br> ''Panthera tigris''
 |}
 |-
 | align=center colspan=2 | [[File:Panthera_tigris_sumatran_subspecies.jpg|250px]]
