*Empty MediaWiki Message*

--- a/ᏢᏓᏥᏧᎶᎸᏗ.mw
+++ b/ᏢᏓᏥᏧᎶᎸᏗ.mw
@@ -23,7 +23,7 @@
 | '''ᏗᎦᎪᏗ''' <small>(Species)</small> || [[ᏢᏓᏥ ᏧᎶᎸᏗ|P. tigris]] (ᏢᏓᏥ ᏧᎶᎸᏗ)
 |}
 
-ᎡᏆ ᏅᎩ ᏗᎦᏅᏌᏗ [[ᏪᏏ ᏏᏓᏁᎸᎯ]] ᎡᎯ ᎠᎴ ᎠᏓᎶᏂᎨ ᎠᎴ ᎬᏂᎨ ᎠᏑᏫᏓ <big>'''ᏢᏓᏥ ᏧᎶᎸᏗ'''</big>.
+ᎡᏆ ᏅᎩ ᏗᎦᏅᏌᏗ [[ᏪᏏ ᏏᏓᏁᎸᎯ]] ᎡᎯ ᎠᎴ ᎠᏓᎶᏂᎨ ᎠᎴ ᎬᏂᎨ ᎠᏑᏫᏓ <big>'''ᏢᏓᏥ ᏧᎶᎸᏗ'''</big> ([[ᎶᎻ]]: ''Panthera tigris''; [[ᏲᏁᎦ]]: '''Tiger''').
 
 [[ace:Rimuëng]]
 [[als:Tiger]]
