--- a/Felidae.mw
+++ b/Felidae.mw
@@ -31,7 +31,7 @@ File:Standing_jaguar.jpg|[[ᎠᎺᎵᎨ ᏢᏓᏥ ᎤᏅᏣᏗ]] <br> ''Panthera
 File:LuchsP1050413.jpg|[[ᎬᎮ]] <br> ''Lynx lynx''
 File:Bobcat2.jpg|[[ᎠᎺᎵᎨ ᎬᎮ]] <br> ''Lynx rufus''
 File:Mountain_lion.jpg|[[ᏢᏓᏥ]] <br> ''Puma concolor''
-File:Tiger_in_Ranthambhore.jpg|[[ᏢᏓᏥ ᏤᎶᎸᏗ]] <br> ''Panthera tigris''
+File:Tiger_in_Ranthambhore.jpg|[[ᏢᏓᏥ ᏧᎶᎸᏗ]] <br> ''Panthera tigris''
 File:Clouded_leopard.jpg|[[ᎤᎶᎩᎸ ᏢᏓᏥ]] <br> ''Neofelis nebulosa''
 File:Uncia_uncia.jpg|[[ᎤᎾᏥ ᏢᏓᏥ]] <br> ''Uncia uncia''
 File:Blackleopard.JPG|[[ᎬᏂᎨ ᏢᏓᏥ]] <br> ''Panthera pardus''
