*Empty MediaWiki Message*

--- a/Panthera.mw
+++ b/Panthera.mw
@@ -32,4 +32,4 @@ File:Tiger_in_Ranthambhore.jpg|[[ᏢᏓᏥ ᏧᎶᎸᏗ]] <br> ''Panthera tigris
 File:Blackleopard.JPG|[[ᎬᏂᎨ ᏢᏓᏥ]] <br> ''Panthera pardus''
 </gallery>
 
-[[Category:ᏗᎦᎾᏝᎢ]]
+[[Category:Animalia]]
