--- a/Panthera.mw
+++ b/Panthera.mw
@@ -22,7 +22,7 @@
 |-
 |}
 
-<big>'''ᏢᏓᏥ'''</big> ([[ᎶᎻ]]: ''Panthera'') ᎤᎾᏓᏡᎬ ᎠᏁᎰᎢ. ᎠᏂᏨᏯ ᎤᏅᏌ ᏍᏈᏍᏗ ᎦᏅᎯᏓ ᎤᏂᏂᏈᏡ ᎠᏂᏍᎪᎵ ᏗᏜ. ᎠᏂᎩᏌ ᎠᏂᏃᎯᎵᏙᎯ ᎨᏐ ᎤᎾᏓᏡᎬ. ᏓᎾᎵᏍᏕᎵᏍᎪ ᏓᏂᏃᎵᏙᎲ ᏧᏂᎶᏟᏗ ᏐᏈᎵ ᎠᎴ ᏧᎾᏓᎴᏅᏓ ᏐᏈᎵ ᎢᏳᏍᏗ ᎠᏫᏃ ᎤᏂᏠᏱ. ᏧᎾᏓᏣᏳᏍᏙᏗ ᏂᏚᏅᏅ ᎤᏂᏍᏕᎵᏍᎪ ᎤᏂᏂᏴᏗ ᎠᏂᏃᎵᏙᎲ, ᎤᎾᏓᎾᏫᏍᏙᏗᏅᏊ. ᎭᏫᏯᎭ ᏂᏚᏍᏛ ᏧᎾᎳᏏᏕᏂ ᎤᏂᏍᏕᎵᏍᎪ ᎢᏝᏪ ᎤᏂᏃᎵᏓᏍᏗᎢ.
+<big>'''ᏢᏓᏥ ᎡᏆ'''</big> ([[ᎶᎻ]]: ''Panthera'') ᎤᎾᏓᏡᎬ ᎠᏁᎰᎢ. ᎠᏂᏨᏯ ᎤᏅᏌ ᏍᏈᏍᏗ ᎦᏅᎯᏓ ᎤᏂᏂᏈᏡ ᎠᏂᏍᎪᎵ ᏗᏜ. ᎠᏂᎩᏌ ᎠᏂᏃᎯᎵᏙᎯ ᎨᏐ ᎤᎾᏓᏡᎬ. ᏓᎾᎵᏍᏕᎵᏍᎪ ᏓᏂᏃᎵᏙᎲ ᏧᏂᎶᏟᏗ ᏐᏈᎵ ᎠᎴ ᏧᎾᏓᎴᏅᏓ ᏐᏈᎵ ᎢᏳᏍᏗ ᎠᏫᏃ ᎤᏂᏠᏱ. ᏧᎾᏓᏣᏳᏍᏙᏗ ᏂᏚᏅᏅ ᎤᏂᏍᏕᎵᏍᎪ ᎤᏂᏂᏴᏗ ᎠᏂᏃᎵᏙᎲ, ᎤᎾᏓᎾᏫᏍᏙᏗᏅᏊ. ᎭᏫᏯᎭ ᏂᏚᏍᏛ ᏧᎾᎳᏏᏕᏂ ᎤᏂᏍᏕᎵᏍᎪ ᎢᏝᏪ ᎤᏂᏃᎵᏓᏍᏗᎢ.
 
 == ᏗᏓᏟᎶᏍᏔᏅ ==
 <gallery>
