*Empty MediaWiki Message*

--- a/Panthera.mw
+++ b/Panthera.mw
@@ -3,7 +3,7 @@
 | style="background:#D3D3A4;" align="center" colspan=2 |
 {| border="0" cellpadding="1" cellspacing="0"
 |-
-| align="center" width="200px" | <big><big><big>'''ᏢᏓᏥ'''</big></big></big> <br> ''Panthera''
+| align="center" width="200px" | <big><big><big>'''ᏢᏓᏥ ᎡᏆ'''</big></big></big> <br> ''Panthera''
 |}
 |-
 | align=center colspan=2 | [[File:4panthera2.0.png|250px]]
