*Empty MediaWiki Message*

--- a/Panthera.mw
+++ b/Panthera.mw
@@ -33,3 +33,56 @@ File:Blackleopard.JPG|[[ᎬᏂᎨ ᏢᏓᏥ]] <br> ''Panthera pardus''
 </gallery>
 
 [[Category:Animalia]]
+
+[[ar:نمر (جنس)]]
+[[az:Panter]]
+[[bn:পানথেরা]]
+[[zh-min-nan:Pà-sio̍k]]
+[[be:Пантэры]]
+[[be-x-old:Пантэры]]
+[[bg:Пантери]]
+[[br:Panthera]]
+[[ca:Pantera]]
+[[cs:Panthera]]
+[[da:Panthera]]
+[[de:Eigentliche Großkatzen]]
+[[et:Panter]]
+[[en:Panthera]]
+[[es:Panthera]]
+[[eo:Panteroj]]
+[[eu:Panthera]]
+[[fr:Panthera]]
+[[ko:표범속]]
+[[hr:Pantere]]
+[[io:Pantero]]
+[[id:Panthera]]
+[[ia:Panthera]]
+[[it:Panthera]]
+[[he:פנתר]]
+[[ka:პანტერები]]
+[[kk:Пантералар]]
+[[la:Panthera]]
+[[lv:Panteras]]
+[[lt:Panteros]]
+[[hu:Panthera]]
+[[mk:Panthera]]
+[[ml:പാന്തെറാ]]
+[[ms:Panthera]]
+[[nl:Panthera]]
+[[ne:चितुवा]]
+[[ja:ヒョウ属]]
+[[no:Brølekatter]]
+[[nn:Store kattedyr]]
+[[oc:Panthera]]
+[[pl:Panthera]]
+[[pt:Panthera]]
+[[ru:Пантеры]]
+[[sah:Бөдөҥ куоскалар уустара]]
+[[simple:Panthera]]
+[[fi:Suurkissat]]
+[[sv:Panthera]]
+[[th:Panthera]]
+[[tr:Panthera]]
+[[uk:Пантера]]
+[[vi:Chi Báo]]
+[[zh:豹属]]
