--- a/ᏢᏓᏥ.mw
+++ b/ᏢᏓᏥ.mw
@@ -1,195 +1,109 @@
-{{Taxobox
-| color = pink
-| name = ᏢᏓᏥ
-| status = VU
-| image = African-lion-closeup.jpg
-| image_width = 230px
-| image_caption = ''ᏢᏓᏥ''
-| regnum = [[Animal|Eukarya]]
-| phylum = [[Chordata]]
-| classis = [[Mammal]]ia
-| ordo = [[Carnivora]]
-| familia = [[Felidae]]
-| genus = ''Panthera''
-}}
+{| border=1 align=right cellpadding=4 cellspacing=0 width=300 style="margin: 0 0 1em 1em; background: #f9f9f9; border: 1px #aaaaaa solid; border-collapse: collapse; font-size: 95%;"
+|-
+| style="background:#D3D3A4;" align="center" colspan=2 |
+{| border="0" cellpadding="1" cellspacing="0"
+|-
+| align="center" width="200px" | <big><big><big>'''ᎠᎺᎵᎨ ᏢᏓᏥ ᎤᏅᏣᏗ'''</big></big></big> <br> ''Panthera onca''
+|}
+|-
+| align=center colspan=2 | [[File:Mountain_lion.jpg|250px]]
+|-
+| '''ᎠᏰᎵ ᎤᎾᏙᏢᏒ''' <small>(Regnum)</small> || [[Animalia]] (ᏗᎦᎾᏝᎢ)
+|-
+| '''ᎠᏝᎥᎢ''' <small>(Phylum)</small> || [[Chordata]]
+|-
+| '''ᏗᏓᎴᎾᏔᏅ ᏗᎦᏘᏌᏅᎩ''' <small>(Classis)</small> || [[Mammalia]]
+|-
+| '''ᎠᏓᏅᏍᏗ''' <small>(Ordo)</small> || [[Carnivora]] (ᎭᏅᏴᎠᏂᎩᏍᎩ)
+|-
+| '''ᏏᏓᏁᎸᎯ''' <small>(Familia)</small> || [[Felidae]] (ᏪᏏ ᏏᏓᏁᎸᎯ)
+|-
+| '''ᎾᎿᎨᏒ''' <small>(Genus)</small> || ''[[ᏢᏓᏥ|Puma]]'' (ᏢᏓᏥ)
+|-
+| '''ᏗᎦᎪᏗ''' <small>(Species)</small> || ''[[ᏢᏓᏥ|P. concolor]]'' <br> (ᏢᏓᏥ)
+|}
 
-ᏢᏓᏥ ᎤᎾᏓᏡᎬ ᎠᏁᎰᎢ. ᎠᏂᏨᏯ ᎤᏅᏌ ᏍᏈᏍᏗ ᎦᏅᎯᏓ ᎤᏂᏂᏈᏡ
-ᎠᏂᏍᎪᎵ ᏗᏜ. ᎠᏂᎩᏌ ᎠᏂᏃᎯᎵᏙᎯ ᎨᏐ ᎤᎾᏓᏡᎬ. ᏓᎾᎵᏍᏕᎵᏍᎪ
-ᏓᏂᏃᎵᏙᎲ ᏧᏂᎶᏟᏗ ᏐᏈᎵ ᎠᎴ ᏧᎾᏓᎴᏅᏓ ᏐᏈᎵ ᎢᏳᏍᏗ ᎠᏫᏃ
-ᎤᏂᏠᏱ. ᏧᎾᏓᏣᏳᏍᏙᏗ ᏂᏚᏅᏅ ᎤᏂᏍᏕᎵᏍᎪ ᎤᏂᏂᏴᏗ ᎠᏂᏃᎵᏙᎲ,
-ᎤᎾᏓᎾᏫᏍᏙᏗᏅᏊ. ᎭᏫᏯᎭ ᏂᏚᏍᏛ ᏧᎾᎳᏏᏕᏂ ᎤᏂᏍᏕᎵᏍᎪ
-ᎢᏝᏪ ᎤᏂᏃᎵᏓᏍᏗᎢ.
+ᎡᏆ ᏅᎩᏗᎦᏅᏌᏗ [[ᏪᏏ ᏏᏓᏁᎸᎯ]] ᎡᎯ <big>'''ᏢᏓᏥ'''</big> ([[ᎶᎻ]]: ''Puma concolor''; [[ᏲᏁᎦ]]: '''Cougar''').
 
-[[Category:Animalia]]
-
-{{Link FA|ar}}
-{{Link FA|ca}}
-{{Link FA|de}}
-{{Link FA|es}}
-{{Link FA|fi}}
-{{Link FA|fr}}
-{{Link FA|li}}
-{{Link FA|pl}}
-
-[[ab:Алым]]
-[[af:Leeu]]
-[[am:አንበሳ]]
-[[an:Panthera leo]]
-[[ang:Lēo]]
-[[ar:أسد]]
-[[arc:ܐܪܝܐ]]
-[[arz:سبع]]
-[[av:ГъалбацӀ]]
-[[az:Şir]]
-[[ba:Арыҫлан]]
-[[bat-smg:Liūts]]
-[[be:Леў]]
-[[be-x-old:Леў]]
-[[bg:Лъв]]
-[[bn:সিংহ]]
-[[bo:སེང་གེ།]]
-[[bpy:নংসা]]
-[[br:Leon (loen)]]
-[[bs:Lav]]
-[[bxr:Арсалан]]
-[[ca:Lleó]]
-[[ce:Лом]]
-[[co:Lionu]]
-[[cs:Lev]]
-[[csb:Lew]]
-[[cu:Львъ]]
-[[cv:Арăслан]]
-[[cy:Llew]]
-[[da:Løve]]
-[[de:Löwe]]
-[[dsb:Law]]
-[[el:Λιοντάρι]]
-[[en:Lion]]
-[[eo:Leono]]
-[[es:Panthera leo]]
-[[et:Lõvi]]
-[[eu:Lehoi]]
-[[fa:شیر (گربه‌سان)]]
-[[fi:Leijona]]
-[[fiu-vro:Lõvi]]
-[[fo:Leyvur]]
-[[fr:Lion]]
-[[frr:Lööw]]
-[[ga:Leon]]
-[[gag:Aslan]]
-[[gd:Leòmhann]]
-[[gl:Panthera leo]]
-[[gn:Leõ]]
-[[got:𐌻𐌹𐍅𐌰/Liwa]]
-[[gu:એશિયાઇ સિંહ]]
-[[ha:Zaki]]
-[[hak:Sṳ̂-é]]
-[[haw:Liona]]
-[[he:אריה]]
-[[hi:सिंह (पशु)]]
-[[hif:Ser]]
-[[hr:Lav]]
-[[hsb:Law]]
-[[ht:Lyon]]
-[[hu:Oroszlán]]
-[[hy:Առյուծ]]
-[[ia:Leon]]
-[[id:Singa]]
-[[ig:Odúm]]
-[[io:Leono (mamifero)]]
-[[is:Ljón]]
-[[it:Panthera leo]]
-[[ja:ライオン]]
-[[jv:Singa]]
-[[ka:ლომი]]
-[[kab:Izem]]
-[[kbd:Лиуан]]
-[[kg:Nkosi]]
-[[kk:Арыстан]]
-[[kn:ಸಿಂಹ]]
-[[ko:사자]]
-[[ku:Şêr]]
-[[la:Leo]]
-[[lb:Léiw]]
-[[lbe:Аслан]]
-[[li:Liew]]
-[[lij:Lion (bestia)]]
-[[ln:Nkɔ́si]]
-[[lt:Liūtas]]
-[[ltg:Ļovs]]
-[[lv:Lauva]]
-[[mdf:Орксофта]]
-[[mhr:Арыслан]]
-[[mk:Лав]]
-[[ml:സിംഹം]]
-[[mn:Арслан]]
-[[mr:सिंह]]
-[[mrj:Арыслан]]
-[[ms:Singa]]
-[[mt:Iljun]]
-[[my:ခြင်္သေ့]]
-[[nah:Cuāmiztli]]
-[[ne:सिंह]]
-[[nl:Leeuw (dier)]]
-[[nn:Løve]]
-[[no:Løve]]
-[[nrm:Lion]]
-[[nso:Tau]]
-[[nv:Náshdóítsoh bitsiijįʼ daditłʼooígíí]]
-[[oc:Panthera leo]]
-[[os:Цомахъ]]
-[[pa:ਸ਼ੇਰ]]
-[[pam:Leon (animal)]]
-[[pcd:Lion]]
-[[pl:Lew]]
-[[pms:Lion]]
-[[pnb:ببر شیر]]
-[[ps:زمری]]
-[[pt:Leão]]
-[[qu:Liyun]]
-[[rn:Intare]]
-[[ro:Leu]]
-[[ru:Лев]]
-[[rue:Лев]]
-[[rw:Intare]]
-[[sah:Хахай]]
-[[scn:Panthera leo]]
-[[sh:Lav]]
-[[simple:Lion]]
-[[sk:Lev púšťový]]
-[[sl:Lev]]
-[[sn:Shumba]]
-[[so:Libaax]]
-[[sq:Luani]]
-[[sr:Лав]]
-[[ss:Libubesi]]
-[[st:Tau]]
-[[stq:Leeuwe]]
-[[su:Singa]]
-[[sv:Lejon]]
-[[sw:Simba]]
-[[ta:சிங்கம்]]
-[[te:సింహం]]
-[[tg:Шер]]
-[[th:สิงโต]]
-[[ti:ኣንበሳ]]
-[[tl:Leon]]
-[[tr:Aslan]]
-[[tum:Nkhalamu]]
-[[udm:Арыслан]]
-[[ug:شىر]]
-[[uk:Лев]]
-[[ur:ببر (شیر)]]
-[[vec:Leon]]
-[[vi:Sư tử]]
-[[vls:Lêeuw (bêeste)]]
-[[war:Leon]]
-[[wo:Gaynde]]
-[[xal:Арслң]]
-[[xmf:ნჯილო]]
-[[yi:לייב]]
-[[yo:Kìnìún]]
-[[zh:狮]]
-[[zh-min-nan:Sai]]
-[[zh-yue:獅子]]
-[[zu:Ibhubesi]]
+[[af:Poema]]
+[[ang:Beorglēo]]
+[[ar:أسد الجبل]]
+[[av:Пума]]
+[[az:Puma]]
+[[bn:পুমা]]
+[[zh-min-nan:Bí-chiu-sai]]
+[[be:Пума]]
+[[be-x-old:Пума]]
+[[bg:Пума]]
+[[bs:Puma]]
+[[br:Puma]]
+[[ca:Puma]]
+[[cs:Puma americká]]
+[[co:Puma]]
+[[cy:Pwma]]
+[[da:Puma]]
+[[de:Puma]]
+[[nv:Náshdóítsoh]]
+[[et:Puuma]]
+[[el:Πούμα]]
+[[en:Cougar]]
+[[es:Puma concolor]]
+[[eo:Pumo]]
+[[eu:Puma]]
+[[fa:شیر کوهی]]
+[[fr:Puma]]
+[[gd:Pùma]]
+[[gl:Puma]]
+[[ko:퓨마]]
+[[hr:Puma]]
+[[io:Pumao]]
+[[id:Cougar]]
+[[ia:Puma]]
+[[it:Puma concolor]]
+[[he:פומה]]
+[[jv:Puma]]
+[[ka:პუმა]]
+[[sw:Simba-milima]]
+[[ltg:Puma concolor]]
+[[la:Puma]]
+[[lv:Puma]]
+[[lt:Puma]]
+[[lij:Puma concolor]]
+[[hu:Puma]]
+[[mk:Пума]]
+[[ml:പൂമ]]
+[[xmf:პუმა]]
+[[ms:Puma]]
+[[mn:Пума]]
+[[nah:Miztli]]
+[[nl:Poema]]
+[[ja:ピューマ]]
+[[no:Puma]]
+[[nn:Puma]]
+[[oc:Puma]]
+[[mhr:Пума (тӱрлык)]]
+[[pnb:کوگار]]
+[[pl:Puma]]
+[[pt:Suçuarana]]
+[[ro:Pumă]]
+[[qu:Puma]]
+[[ru:Пума]]
+[[sq:Puma]]
+[[scn:Puma concolor]]
+[[simple:Puma]]
+[[sk:Puma americká]]
+[[sl:Puma]]
+[[sr:Пума]]
+[[fi:Puuma]]
+[[sv:Puma]]
+[[tl:Puma]]
+[[ta:மலையரிமா]]
+[[th:เสือพูม่า]]
+[[chy:Nanose'hame]]
+[[tr:Puma]]
+[[udm:Пума]]
+[[uk:Пума]]
+[[vi:Báo sư tử]]
+[[wa:Puma]]
+[[zh-yue:美洲獅]]
+[[zh:美洲狮]]
