*Empty MediaWiki Message*

--- a/ᏢᏓᏥ.mw
+++ b/ᏢᏓᏥ.mw
@@ -3,7 +3,7 @@
 | style="background:#D3D3A4;" align="center" colspan=2 |
 {| border="0" cellpadding="1" cellspacing="0"
 |-
-| align="center" width="200px" | <big><big><big>'''ᎠᎺᎵᎨ ᏢᏓᏥ ᎤᏅᏣᏗ'''</big></big></big> <br> ''Panthera onca''
+| align="center" width="200px" | <big><big><big>'''ᏢᏓᏥ'''</big></big></big> <br> ''Puma concolor''
 |}
 |-
 | align=center colspan=2 | [[File:Mountain_lion.jpg|250px]]
