*Empty MediaWiki Message*

--- a/ᏢᏓᏥ_ᎤᏃᏕᎾ.mw
+++ b/ᏢᏓᏥ_ᎤᏃᏕᎾ.mw
@@ -23,7 +23,7 @@
 | '''ᏗᎦᎪᏗ''' <small>(Species)</small> || ''[[ᏢᏓᏥ ᎤᏍᏆᎴᏂ|P. leo]]'' (ᏢᏓᏥ ᎤᏍᏆᎴᏂ)
 |}
 
-[[ᏪᏏ ᏏᏓᏁᎸᎯ]] ᎡᎯ <big>'''ᏢᏓᏥ ᎤᏍᏆᎴᏂ'''</big>.
+ᎡᏆ ᏅᎩᏗᎦᏅᏌᏗ [[ᏪᏏ ᏏᏓᏁᎸᎯ]] ᎡᎯ <big>'''ᏢᏓᏥ ᎤᏍᏆᎴᏂ'''</big> ([[ᎶᎻ]]: ''Panthera leo''; [[ᏲᏁᎦ]]: '''Lion''').
 
 [[kbd:Лиуан]]
 [[af:Leeu]]
