*Empty MediaWiki Message*

--- a/ᎤᎶᎩᎸ_ᏢᏓᏥ.mw
+++ b/ᎤᎶᎩᎸ_ᏢᏓᏥ.mw
@@ -3,7 +3,7 @@
 | style="background:#D3D3A4;" align="center" colspan=2 |
 {| border="0" cellpadding="1" cellspacing="0"
 |-
-| align="center" width="200px" | <big><big><big>'''ᎤᎶᎩᎸ ᏢᏓᏥ'''</big></big></big> <br> ''Neofelis''
+| align="center" width="200px" | <big><big><big>'''ᎤᎶᎩᎸ ᏢᏓᏥ'''</big></big></big> <br> ''Neofelis nebulosa''
 |}
 |-
 | align=center colspan=2 | [[File:Clouded_leopard.jpg|250px]]
