*Empty MediaWiki Message*

--- a/ᎩᏟ.mw
+++ b/ᎩᏟ.mw
@@ -1,25 +1,34 @@
-{{Taxobox
-| color = pink
-| name = ᎩᏟ
-| status = LC
-| image = Bloodhound duke 1.jpg
-| image_width = 200px
-| image_caption = ''ᎩᏟ ᎦᏃᎯᎵᏙᎯ''
-| regnum = [[Animal|Eukarya]]
-| phylum = [[Chordata]]
-| classis = [[Mammal]]ia
-| ordo = [[Carnivora]]
-| familia = [[Canidae]]
-| tribus = [[Canini]]
-| genus = ''Canis''
-}}
-ᎩᏟ (''Canis lupus familiaris'').
-ᎩᏟ ᎤᎳᏉᏗ ᏪᏌ ᏧᎨᎲᏍᏗ. ᎠᏣᎳᎩ ᎩᏟ "Carolina ᎩᏟ" "ᎠᎹᏰᎵ ᏗᏂᎪ"-Ꭸ.
-[[File:Carolinas1.jpg|thumb|left|"Carolina ᎩᏟ" "ᎠᎹᏰᎵ ᏗᏂᎪ"-Ꭸ.]]
+{| border=1 align=right cellpadding=4 cellspacing=0 width=300 style="margin: 0 0 1em 1em; background: #f9f9f9; border: 1px #aaaaaa solid; border-collapse: collapse; font-size: 95%;"
+|-
+| style="background:#D3D3A4;" align="center" colspan=2 |
+{| border="0" cellpadding="1" cellspacing="0"
+|-
+| align="center" width="200px" | <big><big><big>'''ᎩᏟ'''</big></big></big> <br> ''Canis lupus familiaris''
+|}
+|-
+| align=center colspan=2 | [[File:YellowLabradorLooking_new.jpg|250px]]
+|-
+| '''ᎠᏰᎵ ᎤᎾᏙᏢᏒ''' <small>(Regnum)</small> || [[Animalia]] (ᏗᎦᎾᏝᎢ)
+|-
+| '''ᎠᏝᎥᎢ''' <small>(Phylum)</small> || [[Chordata]]
+|-
+| '''ᏗᏓᎴᎾᏔᏅ ᏗᎦᏘᏌᏅᎩ''' <small>(Classis)</small> || [[Mammalia]]
+|-
+| '''ᎠᏓᏅᏍᏗ''' <small>(Ordo)</small> || [[Carnivora]] (ᎭᏅᏴᎠᏂᎩᏍᎩ)
+|-
+| '''ᏏᏓᏁᎸᎯ''' <small>(Familia)</small> || [[Canidae]] (ᎩᏟ ᏏᏓᏁᎸᎯ)
+|-
+| '''ᎾᎿᎨᏒ''' <small>(Genus)</small> || ''[[Canis]]'' (ᎩᏟ)
+|-
+| '''ᏗᎦᎪᏗ''' <small>(Species)</small> || ''[[ᏩᏯ|C. lupus]]'' <br> (ᏩᏯ)
+|-
+| '''ᏗᎦᎪᏗ ᎤᏍᏗ''' <small>(Subspecies)</small> || ''[[ᎩᏟ|C. l. familiaris]]'' <br> (ᎩᏟ)
+|}
+
+<big>'''ᎩᏟ'''</big> ([[ᎶᎻ]]: ''Canis lupus familiaris''). ᎩᏟ ᎤᎳᏉᏗ ᏪᏌ ᏧᎨᎲᏍᏗ. ᎠᏣᎳᎩ ᎩᏟ "ᎦᏯᎴᏂ ᎩᏟ".
+
+[[File:Carolinas1.jpg|thumb|left|"ᎦᏯᎴᏂ ᎩᏟ".]]
 {{stub}}
-
-
-<!-- interwiki -->
 
 [[Category:Animalia]]
 
