*Empty MediaWiki Message*

--- a/ᏩᏯ.mw
+++ b/ᏩᏯ.mw
@@ -1,6 +1,166 @@
-[[File:Wolf at Woburn Safari Park.jpg|thumb|''Canis lupus'', ᎤᏍᎪᎸ ᏌᎪᏂᎨ, Woburn Safari ᎠᏣᏪᏐᎸᏍᏙᏗ, ᎩᎵᏏᎯ]]
+{| border=1 align=right cellpadding=4 cellspacing=0 width=300 style="margin: 0 0 1em 1em; background: #f9f9f9; border: 1px #aaaaaa solid; border-collapse: collapse; font-size: 95%;"
+|-
+| style="background:#D3D3A4;" align="center" colspan=2 |
+{| border="0" cellpadding="1" cellspacing="0"
+|-
+| align="center" width="200px" | <big><big><big>'''ᏩᏯ'''</big></big></big> <br> ''Canis lupus''
+|}
+|-
+| align=center colspan=2 | [[File:Wolf at Woburn Safari Park.jpg|250px]]
+|-
+| '''ᎠᏰᎵ ᎤᎾᏙᏢᏒ''' <small>(Regnum)</small> || [[Animalia]] (ᏗᎦᎾᏝᎢ)
+|-
+| '''ᎠᏝᎥᎢ''' <small>(Phylum)</small> || [[Chordata]]
+|-
+| '''ᏗᏓᎴᎾᏔᏅ ᏗᎦᏘᏌᏅᎩ''' <small>(Classis)</small> || [[Mammalia]]
+|-
+| '''ᎠᏓᏅᏍᏗ''' <small>(Ordo)</small> || [[Carnivora]] (ᎭᏅᏴᎠᏂᎩᏍᎩ)
+|-
+| '''ᏏᏓᏁᎸᎯ''' <small>(Familia)</small> || [[Canidae]] (ᎩᏟ ᏏᏓᏁᎸᎯ)
+|-
+| '''ᎾᎿᎨᏒ''' <small>(Genus)</small> || ''[[Canis]]'' (ᎩᏟ)
+|-
+| '''ᏗᎦᎪᏗ''' <small>(Species)</small> || ''[[ᏩᏯ|C. lupus]]'' <br> (ᏩᏯ)
+|-
+|}
+
 ᎯᎢᎾ ᎤᏂᏍᎦᏎᏗ ᎠᎾᏝᎢᏙᎯ ᏚᎾᎵᎪᏐ ᎠᏂᏃᎯᎵᏙᎲ ᏚᎾᏓᏡᎪᎢ. ᎠᏂᎨᎯᏙᎰ ᎠᏂᏃᎵᏙᎯ (ᎠᏫ, ᎠᏫᎡᏆ) ᎢᏅᎯᏴᎢ ᎩᎳ ᎠᏂᎨᎯᏙ ᏱᏚᏯᏪᏣ, ᎿᏊ ᎠᏂᏂᏱᏍᎪ. ᏗᏯᏖᎾ ᏚᎾᎳᏍᎬ ᎬᏩᏂᏍᏕᎵᏍᎪ ᎤᎾᏓᎾᏫᏍᏙᏗ ᎥᎾᏥ ᏱᎩ. ᎤᎾᏛᎪᏗ ᎣᏍᏓ ᎨᏐ ᏗᏓᏛᎪᏩᏅᏃ ᎠᏂᏐᎢ ᏩᎭᏯ ᎤᎾᏓᏡᎬ, ᎾᏂᏪᏒᎢ.
 
 ᏩᏯ ᎭᏫᏯ ᎠᎩᏍᏗ.
 
 [[Category:Animalia]]
+
+[[kbd:Дыгъужъ]]
+[[af:Wolf]]
+[[ang:Ƿulf]]
+[[ab:Абгаду]]
+[[ar:ذئب رمادي]]
+[[an:Canis lupus]]
+[[frp:Lop]]
+[[ast:Canis lupus]]
+[[av:БацӀ]]
+[[az:Adi canavar]]
+[[bn:নেকড়ে]]
+[[zh-min-nan:Lông]]
+[[ba:Бүре]]
+[[be:Воўк]]
+[[be-x-old:Воўк]]
+[[bg:Вълк]]
+[[bar:Wuif]]
+[[bo:སྤྱང་ཀི]]
+[[bs:Vuk]]
+[[br:Bleiz gris]]
+[[bxr:Шоно]]
+[[ca:Llop]]
+[[cv:Кашкăр]]
+[[cs:Vlk obecný]]
+[[co:Lupu]]
+[[cy:Blaidd]]
+[[da:Ulv]]
+[[de:Wolf]]
+[[nv:Mąʼiitsoh]]
+[[et:Hunt]]
+[[el:Λύκος]]
+[[eml:Lauv]]
+[[en:Wolf]]
+[[myv:Верьгиз]]
+[[es:Canis lupus]]
+[[eo:Lupo]]
+[[eu:Otso]]
+[[fa:گرگ]]
+[[fo:Úlvur]]
+[[fr:Loup]]
+[[fy:Wolf]]
+[[fur:Lôf]]
+[[ga:Mac tíre]]
+[[gd:Faol]]
+[[gl:Lobo]]
+[[glk:ورگ]]
+[[got:𐍅𐌿𐌻𐍆𐍃/Wulfs]]
+[[hak:Lòng]]
+[[ko:늑대]]
+[[hy:Գորշ գայլ]]
+[[hi:भेड़िया]]
+[[hr:Sivi vuk]]
+[[io:Volfo]]
+[[id:Serigala abu-abu]]
+[[ia:Lupo gris]]
+[[iu:Amaruk]]
+[[ik:Amaġuq]]
+[[os:Бирæгъ]]
+[[is:Úlfur]]
+[[it:Canis lupus]]
+[[he:זאב מצוי]]
+[[kl:Amaroq]]
+[[ka:მგელი]]
+[[csb:Tósz]]
+[[kk:Қасқыр]]
+[[kv:Кӧин]]
+[[ht:Lou]]
+[[ku:Gur]]
+[[ky:Карышкыр]]
+[[mrj:Пирӹ]]
+[[lbe:БарцӀ]]
+[[ltg:Palākais vylks]]
+[[la:Lupus]]
+[[lv:Pelēkais vilks]]
+[[lb:Wollef]]
+[[lt:Pilkasis vilkas]]
+[[lij:Canis lupus]]
+[[li:Wouf]]
+[[lmo:Canis lupus]]
+[[hu:Szürke farkas]]
+[[mk:Волк]]
+[[ml:ചെന്നായ്]]
+[[mzn:ورگ]]
+[[ms:Serigala]]
+[[mdf:Вьрьгаз]]
+[[mn:Саарал чоно]]
+[[nah:Cuetlāchtli]]
+[[nl:Wolf (dier)]]
+[[cr:ᒪᐦᐃᐦᑲᓐ]]
+[[ne:ब्वाँसो]]
+[[ja:オオカミ]]
+[[ce:Borz]]
+[[no:Ulv]]
+[[nn:Ulv]]
+[[nrm:Loup]]
+[[oc:Canis lupus]]
+[[mhr:Пире]]
+[[koi:Кӧин]]
+[[pl:Wilk]]
+[[pt:Lobo]]
+[[ro:Lup cenușiu]]
+[[qu:Lupu]]
+[[rue:Вовк]]
+[[ru:Волк]]
+[[sah:Бөрө]]
+[[se:Gumpe]]
+[[sco:Wouf]]
+[[stq:Wulf]]
+[[sq:Ujku]]
+[[scn:Lupu]]
+[[simple:Grey wolf]]
+[[sk:Vlk dravý]]
+[[sl:Sivi volk]]
+[[cu:Влькъ]]
+[[szl:Wilk]]
+[[so:Yeey]]
+[[sr:Вук]]
+[[sh:Vuk]]
+[[fi:Susi]]
+[[sv:Varg]]
+[[tl:Lobo (hayop)]]
+[[ta:ஓநாய்]]
+[[te:బూడిదరంగు తోడేలు]]
+[[th:หมาป่า]]
+[[tg:Гург]]
+[[chy:Ho'nehe]]
+[[tr:Kurt]]
+[[udm:Кион]]
+[[uk:Вовк]]
+[[vi:Sói xám]]
+[[fiu-vro:Susi]]
+[[wa:Leu]]
+[[bat-smg:Vėlks]]
+[[zh:狼]]
