Undo revision 28628 by [[Special:Contributions/Metrónomo|Metrónomo]] ([[User talk:Metrónomo|talk]]) ᏲᏁᎦ  ᎩᏢᏍᎦ ᎠᎵᏍᏕᎵᏍᏗ

--- a/ᏧᎴᎯᏌᏅᎯ.mw
+++ b/ᏧᎴᎯᏌᏅᎯ.mw
@@ -2,22 +2,22 @@
 
 ᎭᏫᎾᏗᏢ ᎯᎸᎯᏳᎢ [[Egyptian mythology|Egyptian ᎤᏁᎳᏅᎯ]] ᎠᎴ ᎭᏫᎾᏗᏢ [[Mythology|ᎢᏰᎵᏍᏗᎢderived]] ᏂᏛᎴᏅᏓ ᎾᏍᎩ, ᎯᎠ '''ᏧᎴᎯᏌᏅᎯ''' ᎠᎴ '''phœnix''' ᎨᏒᎢ [[Mythology|ᎢᏰᎵᏍᏗᎢ]]ᎦᎾᏄᎪᏫᏒ ᎦᎸᏉᏗ [[fire bird (mythology)|ᎠᏥᎸ-ᏥᏍᏆ]]. 
 
-ᏄᏪᏒᎩ ᎠᎴᏂᏓᏍᏗ ᎾᏍᎩᎾᎢ 500 ᎠᎴ 1461 ᏧᏕᏘᏴᏓ (ᎥᎵᏍᎦᏍᏙᏗᏍᎬ ᎾᎿ ᎯᎠ ᏗᏓᎴᎲᏍᎬ), ᎯᎠ ᏧᎴᎯᏌᏅᎯ ᎨᏒᎢ [[ᏥᏍᏆ]] ᎬᏙᏗ ᎤᏬᏚᎯ ᎠᏕᎸ ᏓᎶᏂᎨ ᎠᎴ ᎩᎦᎨ [[plumage|ᎦᏅᏙᎬ]]. ᎾᎾᎢ ᎯᎠ ᎤᎵᏍᏛ Ꮝ ᎥᎴᏂᏙᎲ-ᎠᏓᏠᎯᏍᏗ ᎯᎠ ᏧᎴᎯᏌᏅᎯ ᎠᏓᏁᎸ ᎠᏁᏍᎬᏗ ᎤᏩᏌᏊ ᎤᏁᏍᎩᎸᏒ [[cinnamon|ᏬᏗᎨ]] ᎢᎦᏛ Ꮎ ᎾᏍᎩ ᎾᎯᏳᎢ ᎠᏥᏍᏝᏗᏍᏗ; ᎢᏧᎳ ᎤᏁᏍᎩᎸᏒ ᎠᎴ ᏥᏍᏆ ᎦᎴᏴᏒ ᎦᎾᏰᎩ ᎠᎴ ᎠᎴ ᎠᎦᏲᎳᏛᎯ ᎦᏍᏚ, ᏂᏛᎴᏅᏓ ᎦᏙ ᎤᏍᏗ ᎢᏤ, ᎠᏲᎵ ᏧᎴᎯᏌᏅᎯ ᏗᎶᏗ. ᎯᎠ ᎢᏤ ᏧᎴᎯᏌᏅᎯ [[embalm|ᏗᏓᏂᏐᏗ]]ᎯᎠ ᎦᏍᏚ ᎯᎠ ᎠᎦᏴᎵ ᏧᎴᎯᏌᏅᎯ ᎭᏫᎾᏗᏢ ᎤᏪᏥ ᎪᏢᏅᎯ [[myrrh|ᎠᎵᏍᏚᏟᏍᏗ]] ᎠᎴ ᏚᏂᏍᏆᏂᎪᏛ ᎾᏍᎩ ᎭᏫᎾᏗᏢ ᎯᎠ [[Egypt]]ian ᎦᏚᎲᎢ [[Heliopolis (ancient)|Heliopolis]] ("ᎯᎠ ᎦᏚᎲᎢ ᎯᎠ ᏅᏙ ᎢᎦ ᎡᎯ" ᎭᏫᎾᏗᏢ [[Greek language|ᎠᎪᎢ]]). ᎯᎠ ᏥᏍᏆ ᏥᏄᏍᏛᎩ ᎾᏍᎩ ᎾᏍᏇ ᏄᏪᏒᎩ ᎠᏕᎯᏐᏗ ᎯᎳᎪ ᎢᏳ ᎠᏥᏐᏅᏅ ᎠᎴ ᎠᏥᏐᏅᏅᎯ ᎾᎥᎢ ᏗᏂᏓᏄᏫ, ᎯᎠ ᎢᏴ ᎠᎴᏂᏙᎲ ᎾᎥᏂᎨᏍᏗ ᎠᏲᎱᏍᎩ ᏂᎨᏒᎾ ᎠᎴ ᏄᎵᏂᎬᎬ — ᏗᎬᏟᎶᏍᏙᏗ [[Holy Spirit|ᎠᏥᎸ]] ᎠᎴ [[divinity|ᎤᏁᎳᏅᎯ ᎠᎦᏘᏯ]].
+ᏄᏪᏒᎩ ᎠᎴᏂᏓᏍᏗ ᎾᏍᎩᎾᎢ 500 ᎠᎴ 1461 ᏧᏕᏘᏴᏓ (ᎥᎵᏍᎦᏍᏙᏗᏍᎬ ᎾᎿ ᎯᎠ ᏗᏓᎴᎲᏍᎬ), ᎯᎠ ᏧᎴᎯᏌᏅᎯ ᎨᏒᎢ [[bird|ᏥᏍᏆ]] ᎬᏙᏗ ᎤᏬᏚᎯ ᎠᏕᎸ ᏓᎶᏂᎨ ᎠᎴ ᎩᎦᎨ [[plumage|ᎦᏅᏙᎬ]]. ᎾᎾᎢ ᎯᎠ ᎤᎵᏍᏛ Ꮝ ᎥᎴᏂᏙᎲ-ᎠᏓᏠᎯᏍᏗ ᎯᎠ ᏧᎴᎯᏌᏅᎯ ᎠᏓᏁᎸ ᎠᏁᏍᎬᏗ ᎤᏩᏌᏊ ᎤᏁᏍᎩᎸᏒ [[cinnamon|ᏬᏗᎨ]] ᎢᎦᏛ Ꮎ ᎾᏍᎩ ᎾᎯᏳᎢ ᎠᏥᏍᏝᏗᏍᏗ; ᎢᏧᎳ ᎤᏁᏍᎩᎸᏒ ᎠᎴ ᏥᏍᏆ ᎦᎴᏴᏒ ᎦᎾᏰᎩ ᎠᎴ ᎠᎴ ᎠᎦᏲᎳᏛᎯ ᎦᏍᏚ, ᏂᏛᎴᏅᏓ ᎦᏙ ᎤᏍᏗ ᎢᏤ, ᎠᏲᎵ ᏧᎴᎯᏌᏅᎯ ᏗᎶᏗ. ᎯᎠ ᎢᏤ ᏧᎴᎯᏌᏅᎯ [[embalm|ᏗᏓᏂᏐᏗ]]ᎯᎠ ᎦᏍᏚ ᎯᎠ ᎠᎦᏴᎵ ᏧᎴᎯᏌᏅᎯ ᎭᏫᎾᏗᏢ ᎤᏪᏥ ᎪᏢᏅᎯ [[myrrh|ᎠᎵᏍᏚᏟᏍᏗ]] ᎠᎴ ᏚᏂᏍᏆᏂᎪᏛ ᎾᏍᎩ ᎭᏫᎾᏗᏢ ᎯᎠ [[Egypt]]ian ᎦᏚᎲᎢ [[Heliopolis (ancient)|Heliopolis]] ("ᎯᎠ ᎦᏚᎲᎢ ᎯᎠ ᏅᏙ ᎢᎦ ᎡᎯ" ᎭᏫᎾᏗᏢ [[Greek language|ᎠᎪᎢ]]). ᎯᎠ ᏥᏍᏆ ᏥᏄᏍᏛᎩ ᎾᏍᎩ ᎾᏍᏇ ᏄᏪᏒᎩ ᎠᏕᎯᏐᏗ ᎯᎳᎪ ᎢᏳ ᎠᏥᏐᏅᏅ ᎠᎴ ᎠᏥᏐᏅᏅᎯ ᎾᎥᎢ ᏗᏂᏓᏄᏫ, ᎯᎠ ᎢᏴ ᎠᎴᏂᏙᎲ ᎾᎥᏂᎨᏍᏗ ᎠᏲᎱᏍᎩ ᏂᎨᏒᎾ ᎠᎴ ᏄᎵᏂᎬᎬ — ᏗᎬᏟᎶᏍᏙᏗ [[Holy Spirit|ᎠᏥᎸ]] ᎠᎴ [[divinity|ᎤᏁᎳᏅᎯ ᎠᎦᏘᏯ]].
 
 ᎾᏍᎩ ᎤᏁᎳᎩ ᏄᏍᏛ ᏗᎧᏃᏗ (ᎠᎴ ᎥᎴᏂᏙᎲ-ᎾᎥᏂᎨ ᎡᎵᏍᏗ) ᏧᏓᎴᎾᎯ, ᎯᎠ ᏧᎴᎯᏌᏅᎯ ([[Bennu]] ᏥᏍᏆ) ᎠᏓᏁᏟᏴᏍᏗ ᎤᏂᎸᏉᏗ ᎭᏫᎾᏗᏢ ᎢᎬᏱ [[Christianity|ᏧᎾᏁᎸᏗ]] ᏗᏟᎶᏍᏙᏗ, ᎪᏪᎸ ᏄᏍᏗᏓᏅ ᎠᎴ [[Christian symbolism|ᏧᎾᏁᎸᏗ ᏄᏍᏛ ᏗᎧᏃᏗ]], ᏥᏄᏍᏗ ᏗᎬᏟᎶᏍᏙᏗ ᎦᎶᏁᏛ, ᎠᎴ ᎤᏗᏗᏢ, ᏄᏓᏛᏁᎸᎩ ᎯᎠ [[resurrection|ᎠᏤᎯᏐᏗᏱ]], [[immortality|ᎢᎪᎯᏓ]], ᎠᎴ ᎯᎠ [[afterlife|ᎥᎴᏂᏙᎲ-ᎤᎶᏐᏅ-ᎠᏲᎱᎯᏍᏗ]] [[Jesus Christ|ᏥᏌ ᎦᎶᏁᏛ]].
 
-ᎠᎴᏅᏔᏅ, ᎯᎠ ᏧᎴᎯᏌᏅᎯ ᏥᏄᏍᏛᎩ identified ᎾᎥᎢ ᎯᎠ Egyptians ᏥᏄᏍᏗ [[stork]] ᎠᎴ [[heron (bird)|ᎸᏂᏤᏓᎵ]]-ᎾᏍᎩᏯᎢ ᏥᏍᏆ ᎤᏯᏅᎲ ''[[Bennu|benu]]'', ᎤᎾᏅᏛ ᏂᏛᎴᏅᏓ ᎯᎠ ''[[Book of the Dead|ᎪᏪᎵ ᎯᎠ ᎤᏲᎱᏒ]]'' ᎠᎴ ᏐᎢ Egyptian ᏓᎵᏍᏛ ᏥᏄᏍᏗ ᏌᏊ ᎯᎠ ᎦᎸᏉᏗ ᏗᎬᏟᎶᏍᏙᏗ ᎠᏓᏙᎵᏍᏙᏗ ᎾᎾᎢ Heliopolis, ᎾᎥᏂᎨᎢ ᎤᎾᎵᎪᏅᎯ ᎬᏙᏗ ᎯᎠ ᎠᎵᏌᎳᏗᏍᎬ [[ᏅᏓ|ᏅᏙ ᎢᎦ ᎡᎯ]] ᎠᎴ ᎯᎠ [[Egyptian mythology|Egyptian]] [[sun-god|ᏅᏙ ᎢᎦ ᎡᎯ-ᎤᏁᎳᏅᎯ]] [[Ra]]. 
+ᎠᎴᏅᏔᏅ, ᎯᎠ ᏧᎴᎯᏌᏅᎯ ᏥᏄᏍᏛᎩ identified ᎾᎥᎢ ᎯᎠ Egyptians ᏥᏄᏍᏗ [[stork]] ᎠᎴ [[heron (bird)|ᎸᏂᏤᏓᎵ]]-ᎾᏍᎩᏯᎢ ᏥᏍᏆ ᎤᏯᏅᎲ ''[[Bennu|benu]]'', ᎤᎾᏅᏛ ᏂᏛᎴᏅᏓ ᎯᎠ ''[[Book of the Dead|ᎪᏪᎵ ᎯᎠ ᎤᏲᎱᏒ]]'' ᎠᎴ ᏐᎢ Egyptian ᏓᎵᏍᏛ ᏥᏄᏍᏗ ᏌᏊ ᎯᎠ ᎦᎸᏉᏗ ᏗᎬᏟᎶᏍᏙᏗ ᎠᏓᏙᎵᏍᏙᏗ ᎾᎾᎢ Heliopolis, ᎾᎥᏂᎨᎢ ᎤᎾᎵᎪᏅᎯ ᎬᏙᏗ ᎯᎠ ᎠᎵᏌᎳᏗᏍᎬ [[sun|ᏅᏙ ᎢᎦ ᎡᎯ]] ᎠᎴ ᎯᎠ [[Egyptian mythology|Egyptian]] [[sun-god|ᏅᏙ ᎢᎦ ᎡᎯ-ᎤᏁᎳᏅᎯ]] [[Ra]]. 
 
 == ᎢᏰᎵᏍᏗᎢ ᎠᏓᎴᏂᏍᎬ ==
 
 
 ᏧᎴᎯᏌᏅᎯ (ᎾᏍᎩ ᎾᏍᏇ ᎤᎾᏅᏛ ᏥᏄᏍᏗ Garuda ᎭᏫᎾᏗᏢ lᏳᏕᏘᏴᏓ) ᎨᏒᎢ ᎯᎠ ᎤᏦᎠᏎᏗ ᎠᏥᎸ-ᏥᏍᏆ ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᎠᎦᏎᏍᏔᏅ ᏥᏄᏍᏗ ᎤᏍᏗ ᏓᏆᎴᎷ Hindu ᎤᏁᎳᏅᎯ ᎤᏁᎳᏅᎯ. Ꮝ ᏩᏎᎸᎯ ᏰᎵᏇ ᎾᏍᏋ ᎠᏩᏛᏗ ᎭᏫᎾᏗᏢ Hindu ᏄᏍᏛ ᏗᎧᏃᏗ Ramayana.
 
-ᎯᎠ [[ᎠᎪᎢ]] ᏰᎵ ᏗᏙᎳᎩ ᎢᎬᏁᎸ ᎯᎠ ᎧᏁᏨ ''bennu'' (ᎠᎴ ᎾᏍᎩ ᎾᏍᏇ ᎤᎩᏒᎩ ᎦᏬᎯᎸᏙᏗ Ꮝ ᎤᏗᏗᏢ Egyptian ᎦᏛᎬᎢ [[ᎢᏳ ᎢᎪᎯ ᏂᎦᏅᎯᏒ]] ᏡᎬ), ᎠᎴ identified ᎾᏍᎩ ᎬᏙᏗ ᎤᎾᏤᎵ ᎣᏤᎵ ᎧᏁᏨ ''ᏧᎴᎯᏌᏅᎯ'', ᎦᏛᎬᎢ ᎯᎠ [[ᏗᎧᏃᏗ]] ᎩᎨᏍᏗ-ᎩᎦᎨ ᎠᎴ ᎩᎦᎨ (cf. ''[[Phoenicia]]''). ᎤᏅᏌ ᎠᎴ ᎯᎠ [[ᎶᎻ]] ᎠᏍᏓᏩᏗᏒ pictured ᎯᎠ ᏥᏍᏆ ᎤᏟ ᎢᎦᎢ ᎾᏍᎩᏯᎢ [[ᏧᏓᎴᏅᏓ ᏗᎧᏃᏗ]] ᎠᎴ [[ᏬᎭᎵ]]. ᎧᎵ ᏗᏙᎳᎩ ᎯᎠ [[Greek mythology|ᎠᎪᎢ]] ᎯᎠ ᏧᎴᎯᏌᏅᎯ ᎠᎴᏂᏙᎸ ᎭᏫᎾᏗᏢ [[ᎠᎵᏍᏚᏟᏍᏗ]] ᏐᎢ ᎠᏔᎴᏒ ᎠᎹᏱ. ᎾᎾᎢ ᎤᎩᏥᏍᎬ, ᎾᏍᎩ bathed ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᎹ ᎯᎠ ᎠᏔᎴᏒ ᎠᎹᏱ, ᎠᎴ ᎯᎠ ᎠᎪᎢ ᏅᏙ ᎢᎦ ᎡᎯ-ᎤᏁᎳᏅᎯ [[Apollo (god)|ᎡᎶᎯ]] ᎤᎴᏫᏍᏔᏅ ᎤᏤᎵ ᎤᏍᏗ ᏓᏆᎴᎷ (ᎯᎠ ᏅᏙ ᎢᎦ ᎡᎯ) ᎭᏫᎾᏗᏢ ᎠᏓᏅᏍᏗ ᏍᎨ Ꮝ ᎧᏃᎩᏍᏗ. 
+ᎯᎠ [[ᎠᎪᎢ]] ᏰᎵ ᏗᏙᎳᎩ ᎢᎬᏁᎸ ᎯᎠ ᎧᏁᏨ ''bennu'' (ᎠᎴ ᎾᏍᎩ ᎾᏍᏇ ᎤᎩᏒᎩ ᎦᏬᎯᎸᏙᏗ Ꮝ ᎤᏗᏗᏢ Egyptian ᎦᏛᎬᎢ [[ᎢᏳ ᎢᎪᎯ ᏂᎦᏅᎯᏒ]] ᏡᎬ), ᎠᎴ identified ᎾᏍᎩ ᎬᏙᏗ ᎤᎾᏤᎵ ᎣᏤᎵ ᎧᏁᏨ ''ᏧᎴᎯᏌᏅᎯ'', ᎦᏛᎬᎢ ᎯᎠ [[color|ᏗᎧᏃᏗ]] ᎩᎨᏍᏗ-ᎩᎦᎨ ᎠᎴ ᎩᎦᎨ (cf. ''[[Phoenicia]]''). ᎤᏅᏌ ᎠᎴ ᎯᎠ [[ᎶᎻ]] ᎠᏍᏓᏩᏗᏒ pictured ᎯᎠ ᏥᏍᏆ ᎤᏟ ᎢᎦᎢ ᎾᏍᎩᏯᎢ [[ᏧᏓᎴᏅᏓ ᏗᎧᏃᏗ]] ᎠᎴ [[ᏬᎭᎵ]]. ᎧᎵ ᏗᏙᎳᎩ ᎯᎠ [[Greek mythology|ᎠᎪᎢ]] ᎯᎠ ᏧᎴᎯᏌᏅᎯ ᎠᎴᏂᏙᎸ ᎭᏫᎾᏗᏢ [[ᎠᎵᏍᏚᏟᏍᏗ]] ᏐᎢ ᎠᏔᎴᏒ ᎠᎹᏱ. ᎾᎾᎢ ᎤᎩᏥᏍᎬ, ᎾᏍᎩ bathed ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᎹ ᎯᎠ ᎠᏔᎴᏒ ᎠᎹᏱ, ᎠᎴ ᎯᎠ ᎠᎪᎢ ᏅᏙ ᎢᎦ ᎡᎯ-ᎤᏁᎳᏅᎯ [[Apollo (god)|ᎡᎶᎯ]] ᎤᎴᏫᏍᏔᏅ ᎤᏤᎵ ᎤᏍᏗ ᏓᏆᎴᎷ (ᎯᎠ ᏅᏙ ᎢᎦ ᎡᎯ) ᎭᏫᎾᏗᏢ ᎠᏓᏅᏍᏗ ᏍᎨ Ꮝ ᎧᏃᎩᏍᏗ. 
 
 ᏌᏊ ᎠᏓᎵᎦᎵᏍᏗᏍᎩ Ꮎ ᎤᎭ ᏭᏪᏙᎢ ᎧᏁᎢᏍᏔᏅ ᎾᏍᎩᎾᎢ ᎯᎠ Egyptian ᏧᎴᎯᏌᏅᎯ ᎨᏒᎢ ᏗᎪᏍᎩ ᏥᏍᏆ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ [[East Africa|ᎧᎸᎬ Africa]]. ᎪᎯ ᏥᏍᏆ ᎤᏁᏍᎩᎸᏒ ᎾᎿ [[salt flat|ᎠᎹ ᎤᏩᎾᏕᏍᎩ]]Ꮎ ᎠᎴ ᎦᏟᏐᏗᎩ ᎤᏗᎴᎩ ᎾᏍᎩᎾᎢ Ꮝ [[egg (biology)|ᏧᏪᏥ]] ᎠᎴ ᎤᏓᏩᏗᏍᎬ ᏩᎵᏃᎯᏯᏍᎬ; ᎾᏍᎩ ᎠᏓᏁᎸ ᎠᏁᏍᎬᏗ ᎦᎤᏩᏢᏱ ᎯᎸᏍᎩ ᎢᏯᏏᏔᏗᏍᏗ ᎢᏅ ᎢᎦᏘ ᎠᎴ ᎡᏆ ᏰᎵᏊ ᎠᎵᏍᏕᎸᏗ Ꮝ ᎤᏪᏥ, ᎦᏙ ᎤᏍᏗ ᎾᏍᎩ ᎠᏠᏗ ᎭᏫᎾᏗᏢ Ꮎ ᎠᏍᏛᎢ ᎤᏁᏍᏓᎳ ᎦᎸᏙᏗ ᎦᎷᎯᏍᏗ. ᎯᎠ ᏫᏓᏲᎯᏍᏗ ᎠᎵᏱᎵᏒ ᎧᏃᎮᏗ ᏴᏩtᎤᏫᏛ ᎾᏍᎩ ᎯᎠ ᎦᎤᏩᏢᏱ ᎾᎥᏂᎨ ᎡᎵᏍᏗ ᎯᎠ [[ᎠᎾᎵᏖᎸᎲᏍᎬ ᎦᏁᏰᎩ]] [[ᎠᏓᏪᎳᎩᏍᎬ]].
 
-ᎭᏫᎾᏗᏢ [[ᏲᏂᎢ|Russian]] ᎤᏁᎳᏅᎯ, ᎯᎠ ᏧᎴᎯᏌᏅᎯ ᎦᎾᏄᎪᎦ ᏥᏄᏍᏗ ᎯᎠ [[Zhar-Ptitsa]] (Жар-Птица), ᎠᎴ [[firebird|ᎠᏥᎸ-ᏥᏍᏆ]], ᎢᏳᏍᏗ ᎧᏃᎮᏗ ᎯᎠ ᏗᎦᏃᏣᎵ 1910 [[ᏓᎾᏛᏁᎵᏍᎬ ᎤᏍᏆᏗᏍᏗ]] ᎾᎥᎢ [[Igor Stravinsky]].
+ᎭᏫᎾᏗᏢ [[Russia]]n ᎤᏁᎳᏅᎯ, ᎯᎠ ᏧᎴᎯᏌᏅᎯ ᎦᎾᏄᎪᎦ ᏥᏄᏍᏗ ᎯᎠ [[Zhar-Ptitsa]] (Жар-Птица), ᎠᎴ [[firebird|ᎠᏥᎸ-ᏥᏍᏆ]], ᎢᏳᏍᏗ ᎧᏃᎮᏗ ᎯᎠ ᏗᎦᏃᏣᎵ 1910 [[ᏓᎾᏛᏁᎵᏍᎬ ᎤᏍᏆᏗᏍᏗ]] ᎾᎥᎢ [[Igor Stravinsky]].
 ᎯᎠ ᏧᎴᎯᏌᏅᎯ ᏥᏄᏍᏛᎩ featured ᎭᏫᎾᏗᏢ ᎯᎠ ᎦᎶᏂᏗ [[Alexander Ypsilanti (1792-1828)|Alexander Ypsilantis]] ᎠᎴ ᎤᎪᏗᏗ ᏐᎢ ᏗᏓᏘᏂᏙᎯ ᎾᎯᏳᎨᏒ ᎯᎠ [[ᎠᎪᎢ ᎠᏕᏲᎲ]], symbolizing Greece ᎤᏤᎵ rebirth, ᎠᎴ ᏥᏄᏍᏛᎩ ᎠᏑᏰᏛ ᎾᎥᎢ [[John Capodistria|ᎦᎳᏅᎯ Capodistria]] ᏥᏄᏍᏗ ᎯᎠ ᎢᎬᏱ ᎦᏌᎴᎾ ᏗᏂᏃᎨᏂ ᎯᎠ ᎠᎪᎢ ᎤᏔᏂᏗ ᎦᏙᎯ (1828-1832). ᎭᏫᎾᏗᏢ ᎦᏟᏐᏗᎩ, ᎯᎠ ᎢᎬᏱ ᎪᎯᏊ ᎢᏴ ᏥᎩ ᎠᎪᎢ ᏕᎦᏃᏣᎸ ᎠᏔᎴᏍᏗ ᎯᎠ ᏚᏙᎥ ''[[ᏧᎴᎯᏌᏅᎯ]]''. ᎦᎾᏆᏘᏍᏗ ᎠᎴᏂᏙᎲ ᏅᎪᏢᎯᏌᏅ ᎾᎥᎢ ᎠᏥᎸᏉᏗ ᏴᏫ ᎦᏌᎴᎾ ᏗᏂᏃᎨᏂ, ᎾᏍᎩ ᏂᎦᏰᏙᎲᏊ ᎤᏂᎸᏉᏗ ᏗᎬᏟᎶᏍᏙᏗ, ᎠᎴ ᏥᏄᏍᏛᎩ ᎬᏔᏅᎯ ᎠᏏᏇ ᎭᏫᎾᏗᏢ ᎯᎠ 1930s ᎾᎥᎢ ᎯᎠ [[ᏔᎵᏁ ᏗᏍᏆᎸᏙᏗ ᎠᏰᎵ ᎤᏙᏢ]]. ᏱᏂᎬᏛᎾ, Ꮝ ᎬᏙᏗ ᎾᎥᎢ ᎯᎠ [[ᎠᏂᏯᏫᏍᎩ ᏗᏂᎳᏫᎩ 1967-1974]] ᎪᏢᏅᎯ ᎾᏍᎩ ᏭᎶᏒᏍᏔᏅ ᎤᏦᎠᏎᏗ, ᎠᎴ ᎾᏍᎩ ᎤᎭ ᎾᎥᏂᎨᏍᏗ disappeared ᏂᏛᎴᏅᏓ ᎬᏙᏗ ᎤᎶᏐᏅ 1974, ᎬᏙᏗ ᎯᎠ ᎢᎦᏪᏛ ᏓᎦᏘᎴᎬ ᎯᎠ [[Order of the Phoenix (Greek medal)|ᎠᏓᏅᏍᏗ ᎯᎠ ᏧᎴᎯᏌᏅᎯ]].
 
 ᎯᎠ ᏧᎴᎯᏌᏅᎯ ᎦᎾᏄᎪᎦ ᎾᏍᎩ ᎾᏍᏇ ᎾᎿ ᎯᎠ ᎦᏚᎲᎢ ᎦᎶᏂᏗ ᎠᎴ ᎠᎾᎵᏍᏕᎸᎯᏙᎯ [[Atlanta]] (torched ᎭᏫᎾᏗᏢ ᎯᎠ [[ᎢᏧᎳ ᎠᏴ ᎤᎵᎶᎯ ᎢᎬᏁᎯ ᏓᏄᏩ]]), [[San Francisco]] (ᎠᏲᏍᏔᏅ ᎾᎥᎢ [[ᎠᏕᏲᎲ]] ᎠᎴ ᎠᏥᎸ ᎭᏫᎾᏗᏢ 1906), [[Lawrence, KS|Lawrence, Kansas]] (attacked ᎠᎴ ᎤᎴᏴᏒ ᎾᎥᎢ ᎠᎵᎪᏒ raiders ᎦᏂ ᎾᎥᎢ [[William Quantrill]]), ᎠᎴ [[Portland, ME|Portland, Maine]] (ᎠᏲᏍᏔᏅ ᏅᎩ ᎢᏧᏩᎪᏗ ᎾᎥᎢ ᎠᏥᎸ), ᏄᏍᏛ ᏗᎧᏃᏗ ᎯᎠ cities’ rebirths ᏂᏛᎴᏅᏓ ᎯᎠ ᎦᏍᏚ. ᎾᏍᎩ ᎨᏒᎢ ᎾᏍᎩ ᎾᏍᏇ ᎯᎠ ᎠᏐᎠᏍᏙ ᎯᎠ ᎦᏚᎲᎢ [[ᏧᎴᎯᏌᏅᎯ]] ᎭᏫᎾᏗᏢ [[Arizona]], ᎯᎠ 5th ᎤᏔᏂᎢᏍᏗ ᎦᏚᎲᎢ ᎭᏫᎾᏗᏢ ᎯᎠ [[ᎠᏫᏒᏗ ᎧᏃᎮᎭ]] Ꮎ ᎾᏊ ᎤᏬᎳ ᎦᏚᎢ ᎯᎠ ᏩᎵᏃᎯᏯᏍᎬ ᎯᎠ [[Hohokam]] ᎦᏚᎲᎢ Ꮎ ᏥᏄᏍᏛᎩ ᏌᏊ ᎢᏳᏩᎫᏗ ᎾᎿᎢ.
