+{{Link FA|ar}}, {{Link FA|az}}, {{Link FA|de}}, {{Link FA|mk}}

--- a/ᏢᏓᏥ_ᎤᏅᏣᏗ.mw
+++ b/ᏢᏓᏥ_ᎤᏅᏣᏗ.mw
@@ -29,7 +29,10 @@
 
 [[Category:Animalia]]
 
-[[nso:Nkwe]]
+{{Link FA|ar}}
+{{Link FA|az}}
+{{Link FA|de}}
+{{Link FA|mk}}
 
 [[af:Luiperd]]
 [[am:ግሥላ]]
@@ -118,6 +121,7 @@
 [[sq:Leopardi]]
 [[sr:Леопард]]
 [[st:Nkwe]]
+[[nso:Nkwe]]
 [[su:Maung tutul]]
 [[sv:Leopard]]
 [[sw:Chui]]
