--- a/ᎠᎺᎵᎨ_ᎤᏂᎬᏫᏳᎯ.mw
+++ b/ᎠᎺᎵᎨ_ᎤᏂᎬᏫᏳᎯ.mw
@@ -195,7 +195,7 @@
 |- 
 | '''20'''
 | <big>[[ᏥᎻ ᎦᏫᎵᏗ]]</big> <br> <small>''James Garfield'' <br> (1831–1881)</small>
-| [[File:James Garfield - portrait.png|100px]]
+| [[File:James Garfield portrait.png|100px]]
 | [[ᎠᏅᏱ 4]]‚ [[1881]]
 | [[ᏚᎵᏍᏗ 19]]‚ [[1881]]
 | <big>[[ᎤᏴᏜ]]</big>
@@ -221,7 +221,7 @@
 |- 
 | '''23'''
 | <big>[[ᏇᏂᏣᎻᏂ ᎮᏫᏌᏂ]]</big> <br> <small>''Benjamin Harrison'' <br> (1833–1901)</small>
-| [[File:Benjamin Harrison by Estman Johnson (1895).jpg|100px]]
+| [[File:Benjamin Harrison by Eastman Johnson (1895).jpg|100px]]
 | [[ᎠᏅᏱ 4]]‚ [[1889]]
 | [[ᎠᏅᏱ 4]]‚ [[1893]]
 | <big>[[ᎤᏴᏜ]]</big>
