*Empty MediaWiki Message*

--- a/ᎠᎺᎵᎨ_ᎤᏂᎬᏫᏳᎯ.mw
+++ b/ᎠᎺᎵᎨ_ᎤᏂᎬᏫᏳᎯ.mw
@@ -195,7 +195,7 @@
 |- 
 | '''20'''
 | <big>[[ᏥᎻ ᎦᏫᎵᏗ]]</big> <br> <small>''James Garfield'' <br> (1831–1881)</small>
-| [[File:James Garfield portrait.png|100px]]
+| [[File:James Garfield portrait.jpg|100px]]
 | [[ᎠᏅᏱ 4]]‚ [[1881]]
 | [[ᏚᎵᏍᏗ 19]]‚ [[1881]]
 | <big>[[ᎤᏴᏜ]]</big>
