--- a/ᎵᎳ_ᏙᏮᏍ.mw
+++ b/ᎵᎳ_ᏙᏮᏍ.mw
@@ -1,10 +1,10 @@
 [[File:Lila Downs en Oaxaca.jpg|thumb|220px|Right|ᎵᎳ ᏙᏮᏍ, 2010]]
-'''ᎵᎳ ᏙᏮᏍ''' ([[ᏍᏆᏂ ᎧᏬᏂᎯᏍᏗ]]: '''Lila Downs'''; 19-9-1968 Ꮑ [[ᎣᎠᏍᎠᏂ]], [[ᎠᏂᏍᏆᏂᎢ]]) ᎢᏍ Ꭰ ᏍᎢᎾᎦᎡ.
+'''ᎵᎳ ᏙᏮᏍ''' ([[ᏍᏆᏂ ᎧᏬᏂᎯᏍᏗ]]: '''Lila Downs'''; [[19.09]] -[[1968]] Ꮑ [[ᎣᎠᏍᎠᏂ]], [[ᎠᏂᏍᏆᏂᎢ]]) ᎢᏍ Ꭰ ᏍᎢᎾᎦᎡ.
 
 
 == External links ==
 {{Commonscat|Lila Downs|ᎵᎳ ᏙᏮᏍ}}
-* [http://www.imdb.com/name/nm1105038/ IMDb]
+* [http://www.imdb.com/name/nm1105038/ ᏆᎠᏙb]
 * [http://www.liladowns.com/ The Official Site]
 * [http://www.twitter.com/liladowns Lila Downs] at [[Twitter]]
 * [http://www.facebook.com/liladowns Lila Downs] at [[Facebook]]
