*Empty MediaWiki Message*

--- a/ᏣᎳᎩ_ᎧᏬᏂᎯᏍᏗ.mw
+++ b/ᏣᎳᎩ_ᎧᏬᏂᎯᏍᏗ.mw
@@ -1,4 +1,4 @@
---[[Special:Contributions/180.241.99.167|180.241.99.167]] 05:30, 4 UᏃᎸᏔᏂ 2012 (UTC)[[Image:Cherokee USC2000 PHS NCandOK.svg|thumb|260px|ᏣᎳᎩ ᎦᏬᏂᎯᏍᏗ]]
+[[Image:Cherokee USC2000 PHS NCandOK.svg|thumb|260px|ᏣᎳᎩ ᎦᏬᏂᎯᏍᏗ]]
 [[ᎠᏂᏣᎳᎩ]] ᎠᏂᏬᏂᏍᎩ ''polysynthetic'' [[ᎦᏬᏂᎯᏍᏗ]]. ᏣᎳᎩ ᎦᏬᏂᎯᏍᏗ ᎤᏐᏱ ᏏᏓᏁᎳ Iroquoian ᏧᏂᏬᏂᎯᏍᏗ, ᎠᏎᏃ, ᏍᏈᏍᏓ ᏗᏑᏕᏘᏴᏓ ᏥᎨᏒ, ᏐᏉ ᎦᏬᏂᎯᏍᏗ ᏱᎩ. ᎠᏂᏣᎳᎩ ᎠᏂᏴᏫᏯ ᏧᏃᎯᏳ, ᎤᏁᎳᏅᎯ ᎦᏬᏂᎯᏍᏗ ᎤᏮᏏ ᏥᎨᏒᎢ. 1820Ꮫ, [[ᏍᏏᏉᏯ]], ᎠᎴ George Gist, ᎯᎠ ᏣᎳᎩ ᏗᎪᏪᎵ ᎪᏪᎵᏍᎨᎢ. ᏃᏉ ᎯᎠ Unicode ᎢᎩᎭ (ᎭᏫᎾᏗᏢ). ᎯᎠᏃ ᎦᏓᎧ, ᎡᎵᏉ, ᏣᎳᎩ ᎢᎪᏪᎶᏗ [[ᎤᏅᏥᏓ ᎤᎾᎦᎵᏍᎩ]]. ᎯᎠᏍᏊ ᏄᏓᎴᎢ ᎪᎱᏍᏗ ᎤᏰᎵᏛ ᏂᎦᎵᏍᏗᎮᎢ: 2007 ᏥᎨᏒ, [[ᎥᎭᏴᎵ ᏗᏰᎴᎩ]] (Myrtle Driver Johnson) ᎠᎬᏱ ᎢᏳᏩᎧᏔ 1800Ꮝ ᏥᎨᏒ, Charles Frazier ᏗᎪᏪᎵ ᎤᏤᎵ, [[ᏦᎦᏚ ᏅᏙ: ᏥᎨᎬᏬᎥᏗᏍᎨᎢ]] ᏣᎳᎩ ᎠᏁᏍᏗᏍᎩ ᎪᏪᎵᏍᎨᎢ.
 
 {|border="1" style="border-collapse: collapse;"
