*Empty MediaWiki Message*

--- a/ᎤᏔᏅ_ᏗᎧᏃᎩᏍᏗ.mw
+++ b/ᎤᏔᏅ_ᏗᎧᏃᎩᏍᏗ.mw
@@ -1,3 +1,5 @@
+[[File:Steinway Vienna 011.JPG|thumb|]]
+
 '''ᎤᏔᏅ ᏗᎧᏃᎩᏍᏗ''' ᎠᎴ '''ᏗᏂᏤᎷᎯᏍᎩ''' ᎨᏒᎢ [[musical instrument|ᏗᎧᏃᎩᏛ ᎦᏃᏢᎩ ᎪᎱᏍᏗ ᎬᏔᏂᏓᏍᏗ]] classified ᏥᏄᏍᏗ [[keyboard instrument|keyboard]], [[percussion instrument|ᎤᎵᏍᏓ ᏗᎫᎪᏙᏗ]], ᎠᎴ [[string instrument|ᏧᏠᎯᏍᏗ]] ᎪᎱᏍᏗ ᎬᏔᏂᏓᏍᏗ, ᎥᎵᏍᎦᏍᏙᏗᏍᎬ ᎾᎿ ᎯᎠ [[system|ᎢᏯᏛᏁᎵᏓᏍᏗ]] [[musical instrument classification|ᏗᏓᎴᎾᏔᏅ ᏗᎦᏘᏌᏅᎩ]] ᎬᏔᏅᎯ. ᎯᎠ ᎤᏔᏅ ᏗᎧᏃᎩᏍᏗ ᎠᏛᎯᏍᏗ ᎤᏃᏴᎬ ᎾᎥᎢ ᎬᏂᎲᎢ ᎠᏥᎸ ᏔᎷᎩᏍᎩ ᏗᎨᏥᎾᏝᎢ ᎬᏙᏗ [[felt|ᎤᏒᏂᎸ]] ᎦᏅᏆᎶᏍᏗ. ᏧᏩᏚᏃᎯ ᎠᎴ transmitted ᏗᎬᏩᎶᏒ ᎯᎠ [[Bridge (instrument)|ᎠᏒᏢᎢ]] ᎯᎠ [[Sounding board|soundboard]].
 
 ᏓᎾᏁᎶᎲᏍᎬ ᎯᎠ [[piano|ᎤᏔᏅ ᏗᎧᏃᎩᏍᏗ]] ᎨᏒᎢ ᏂᎬᎢ ᎭᏫᎾᏗᏢ [[western music|ᏭᏕᎵᎬᏗᏢ ᏗᎧᏃᎩᏛ]] ᎾᏍᎩᎾᎢ ᎠᏏᏴᏫ ᎧᏃᎩᏍᎩ ᎾᎾᏛᏁᎲ, [[chamber music|ᎤᏂᏴᏍᏗ ᏗᎧᏃᎩᏛ]], ᎠᎴ [[accompaniment|ᎦᏟᏐᏗᎩ]]. ᎾᏍᎩ ᎨᏒᎢ ᎾᏍᎩ ᎾᏍᏇ ᎤᏙᎯᏳ ᎤᏂᎸᏉᏗ ᏥᏄᏍᏗ ᎠᏓᏍᏕᎸᏗ [[musical composition|ᎦᎴᏴᏗᏍᎬᎢ]] ᎠᎴ [[rehearsal|ᏗᏍᏆᎸᏙᏗ]]. ᎾᏍᎩ ᎤᏁᎳᎩ ᎤᏔᏅ ᏗᎧᏃᎩᏍᏗ ᎨᏒᎢ ᎤᏠᏱᎭ ᎤᎪᏗ ᏗᎵᎬᏩᎸᏍᎩ ᎠᎴ ᎾᏍᎩ ᏂᎨᏒᎾ ᎠᎯᏗᎨᎢ ᏒᏃᏱ ᎡᎯ ᏅᏙ, ᎯᎠ ᎪᎱᏍᏗ ᎬᏔᏂᏓᏍᏗ ᎤᏤᎵ ᏂᎬᏩᏍᏛ ᎤᏃᏴᎬ ᎤᎭ ᏭᏪᏙᎢ transmitted ᎾᎥᎢ ᎦᏬᏂᏍᎩ ᎠᎴ replicated ᎾᎥᎢ ᎤᏍᏗᎠᎨᏍᏙᏗ ᏧᎬᏩᏟᏗ electronic keyboards, ᎠᏃᏢᏍᎬ ᎾᏍᎩ ᎠᏓᏙᎳᎩ ᏯᏛᎿ ᎡᏆ ᎤᎾᏛᏓᏍᏗ Ꮎ ᎪᎯ ᎢᎦ ᎯᎠ ᎤᏔᏅ ᏗᎧᏃᎩᏍᏗ ᎨᏒᎢ ᎪᏪᎶᏗ ᎾᏍᎩᎾᎢ Ꮝ ᏒᏃᏱ ᎡᎯ ᏅᏙ. ᎾᎥᎢ ᎯᎠ 20th ᏍᏉᎯᏧᏈ ᏧᏕᏘᏴᏗ, ᎤᏔᏅ ᏗᎧᏃᎩᏍᏗ ᏥᏄᏍᏛᎩ ᎤᎾᏛᎦᏅ ᎭᏫᎾᏗᏢ ᎤᏂᎪᏗᏗ ᏧᎾᏣᏅᏙᏗ ᏗᎧᏃᎩᏛ, ᎢᏧᎳ [[popular music|ᎤᏂᎸᏉᏗ]] ᎠᎴ [[classical music|ᎠᏓᏙᎵᏍᏗ]], ᎠᏃᏢᏍᎬ ᎾᏍᎩ ᎾᎥᏂᎨᏍᏗ ᎢᎬᏩᎾᏓᎴᎩ ᎪᎱᏍᏗ ᎬᏔᏂᏓᏍᏗ ᏴᏩᏚᏫᏛ ᎯᎠ ᎡᎶᎯ.
