--- a/ᎤᎶᎩᎸ_ᏢᏓᏥ.mw
+++ b/ᎤᎶᎩᎸ_ᏢᏓᏥ.mw
@@ -67,6 +67,7 @@
 [[ru:Дымчатый леопард]]
 [[simple:Clouded Leopard]]
 [[sk:Leopard obláčikový]]
+[[sr:Облачасти леопард]]
 [[fi:Puuleopardi]]
 [[sv:Trädleopard]]
 [[th:เสือลายเมฆ]]
