*Empty MediaWiki Message*

--- a/ᎠᎺᎵᎨ_ᎤᏂᎬᏫᏳᎯ.mw
+++ b/ᎠᎺᎵᎨ_ᎤᏂᎬᏫᏳᎯ.mw
@@ -400,7 +400,7 @@
 |- 
 | rowspan=2 | '''40'''
 | rowspan=2 | <big>[[ᏬᎾᎵᏗ ᏪᎦᏂ]]</big> <br> <small>''Ronald Reagan'' <br> (1911–2004)</small>
-| rowspan=2 | [[File:Official Portrait of President Reagan 1981.jpg|100px]]
+| rowspan=2 | [[File:REAGANWH.jpg|100px]]
 | rowspan=2 | [[ᎤᏃᎸᏔᏅ 20]]‚ [[1981]]
 | rowspan=2 | [[ᎤᏃᎸᏔᏅ 20]]‚ [[1989]]
 | rowspan=2 | <big>[[ᎤᏴᏜ]]</big>
