/* ᎠᏛᎯᏍᏙᏗ ᏗᏓᎴᎾᏔᏅ ᏗᎦᏘᏌᏅᎩ */

--- a/ᎦᏬᏂᎯᏍᏗ.mw
+++ b/ᎦᏬᏂᎯᏍᏗ.mw
@@ -52,7 +52,7 @@
 ==== ᎠᏛᎯᏍᏙᏗ ᏗᏓᎴᎾᏔᏅ ᏗᎦᏘᏌᏅᎩ ====
 
 
-ᎯᎠ ᎡᎶᎯ ᎤᏤᎵ ᏗᎦᏬᏂᎯᏍᏗ ᎤᎭ ᏭᏪᏙᎢ grouped ᎾᎾᎯ ᎯᎸᏍᎩ ᎢᏯᏓᏁᎸ ᏗᎦᏬᏂᎯᏍᏗ Ꮎ ᎠᎴ ᎤᏬᎯᏳᏅ ᎤᎭ ᏧᏣᏔᏊ ᏧᏂᎦᏴᎵᎨ ᎢᏳᎵᏍᏔᏅ. ᎢᎦᏛ ᎯᎠ ᎠᏂᏯᏩᏍᎩ ᏄᎬᏫᏳᏒ ᎯᎸᏍᎩ ᎢᏯᏓᏁᎸ ᎠᎴ ᎯᎠ [[Indo-European languages|Indo-European ᏗᎦᏬᏂᎯᏍᏗ]], ᎯᎠ [[Afro-Asiatic languages|Afro-Asiatic ᏗᎦᏬᏂᎯᏍᏗ]], ᎯᎠ [[Austronesian languages|Austronesian ᏗᎦᏬᏂᎯᏍᏗ]], ᎠᎴ ᎯᎠ [[Sino-Tibetan languages|Sino-Tibetan ᏗᎦᏬᏂᎯᏍᏗ]].
+ᎯᎠ ᎡᎶᎯ ᎤᏤᎵ ᏗᎦᏬᏂᎯᏍᏗ ᎤᎭ ᏭᏪᏙᎢ grouped ᎾᎾᎯ ᎯᎸᏍᎩ ᎢᏯᏓᏁᎸ ᏗᎦᏬᏂᎯᏍᏗ Ꮎ ᎠᎴ ᎤᏬᎯᏳᏅ ᎤᎭ ᏧᏣᏔᏊ ᏧᏂᎦᏴᎵᎨ ᎢᏳᎵᏍᏔᏅ. ᎢᎦᏛ ᎯᎠ ᎠᏂᏯᏩᏍᎩ ᏄᎬᏫᏳᏒ ᎯᎸᏍᎩ ᎢᏯᏓᏁᎸ ᎠᎴ ᎯᎠ [[Indo-European languages|Indo-European ᏗᎦᏬᏂᎯᏍᏗ]], ᎯᎠ [[Afro-Asiatic languages|Afro-Asiatic ᏗᎦᏬᏂᎯᏍᏗ]], ᎯᎠ [[Austronesian languages|Austronesian ᏗᎦᏬᏂᎯᏍᏗ]], ᎠᎴ ᎯᎠ [[Sino-Tibetan languages|Sino-Tibetan ᏗᎦᏬᏂᎯᏍᏗ]].lika a sauce boss
 
 ᎯᎠ shared ᏄᏍᏛ ᏗᎨᎦᏃᏗ ᏗᎦᏬᏂᎯᏍᏗ ᏂᏛᎴᏅᏓ ᏌᏊ ᏏᏓᏁᎸᎯ ᏰᎵᏇ ᎾᏍᏋ ᎤᏍᏆᎸᎲ shared ᎦᏌᏆᎸ. (ᎤᏠᏱ ᎢᎬᏁᏗ ᎬᏙᏗ [[homology (biology)|ᎠᎾᎵᏐᏈᎸᏍᎬ]] ᎭᏫᎾᏗᏢ ᎤᎾᏙᏢᎯ.)
 
