*Empty MediaWiki Message*

--- a/ᏧᎦᎾᏮ_ᎠᎹᏰᏟ.mw
+++ b/ᏧᎦᎾᏮ_ᎠᎹᏰᏟ.mw
@@ -15,7 +15,7 @@
 | align="right" | 40,482,000
 | [[Buenos Aires]]
 |-
-| [[Bolivia]]
+| [[ᏬᎵᏮᎠ]]
 | align="right" | 1,098,580
 | align="right" | 9,863,000
 | [[La Paz, Bolivia|La Paz]] ᎠᎴ [[Sucre, Bolivia|Sucre]]
