*Empty MediaWiki Message*

--- a/ᎠᏕᎵ.mw
+++ b/ᎠᏕᎵ.mw
@@ -1,11 +1,76 @@
-[[File:Adele_-_Live_2009_%284%29_cropped.jpg|thumb|ᎠᏕᎴ.]]
-ᏕᏣᏙᎥ  ᎠᏕᎴ ᏌᎪᏂᎨ ᎠᏗᎩᏂᏍ  (Adele Blue Adkins)  </br>
-ᏂᏛᎴᏅᏓ: From   England </br>
-ᎤᏕᏘᏱᏍᎬ	5 May 1988 </br>
-Tottenham, north London, England, UK </br>
-ᏗᎦᎸᏫᏍᏓᏁᏗ	ᏕᏥᏃᎩᎠ </br>
-ᏧᎸᏫᏍᏓᏗ	XL, Columbia </br>
-ᎤᏂᏥᎸ	adele.tv </br>
+{| border=1 align=right cellpadding=4 cellspacing=0 width=300 style="margin: 0 0 1em 1em; background: #f9f9f9; border: 1px #aaaaaa solid; border-collapse: collapse; font-size: 95%;"
+|-
+| style="background:#f0e68c;" align="center" colspan=3 |
+{| border="0" cellpadding="1" cellspacing="0"
+|-
+| align="center" width="200px" | <big><big><big>'''ᎠᏕᎵ'''</big></big></big> <br> ''Adele''
+|}
+|-
+| align=center colspan=2 | [[File:Adele_-_Live_2009_%284%29_cropped.jpg|200px]] <br> ᎠᏕᎵ
+|-
+| '''ᏚᏙᎥ''' || ᎠᏕᎵ ᏌᎪᏂᎨ ᎠᏗᎩᏂᏏ <br> ''Adele Blue Adkins''
+|-
+| '''ᎤᏕᏘᏱᏍᎬ''' || ᎠᏂᏍᎩᏛᎢ 5, 1988 
+|-
+| '''ᎾᎿᎤᏕᏅ''' || [[ᏔᏖᏂᎮᎻ]], [[ᎡᎵᏏᎯ]]
+|-
+|}
+
+<big>ᎠᏕᎵ</big> ([[ᏲᏂᎢ]]: '''Adele Blue Adkins''') ᏲᏁᎦ [[ᏗᎧᏃᎩᏍᎩ]]. ᎠᏕᎵ ᎣᏍᏓ ᎧᏃᎩᏍᎩ ᎠᎴ ᎡᎶᎯ ᏫᏚᏳᎪᏛ ᎠᎪᎵᏨ.
 
 
-ᎠᏕᎴ ᎣᏍᏓ ᎧᏃᎩᏍᎩ ᎠᎴ ᎡᎶᎯ ᏫᏚᏳᎪᏛ ᎠᎪᎵᏨ.
+[[af:Adele]]
+[[ar:أديل]]
+[[az:Adel]]
+[[be:Адэль, спявачка]]
+[[be-x-old:Адэль]]
+[[bg:Адел]]
+[[ca:Adele]]
+[[cs:Adele]]
+[[da:Adele]]
+[[de:Adele (Sängerin)]]
+[[et:Adele]]
+[[el:Αντέλ]]
+[[en:Adele (singer)
+[[es:Adele]]
+[[eo:Adele (kantistino)]]
+[[eu:Adele (abeslaria)]]
+[[fa:ادل]]
+[[fr:Adele]]
+[[gl:Adele]]
+[[ko:아델]]
+[[hy:Ադել]]
+[[id:Adele]]
+[[is:Adele]]
+[[it:Adele (cantante)]]
+[[he:אדל (זמרת)]]
+[[ka:ადელი (მომღერალი)]]
+[[lv:Adele]]
+[[lt:Adele]]
+[[hu:Adele]]
+[[mk:Адел]]
+[[mr:अ‍ॅडेल]]
+[[ms:Adele]]
+[[mn:Адель (дуучин)]]
+[[my:အဒဲလ်]]
+[[nl:Adele (zangeres)]]
+[[ja:アデル (歌手)]]
+[[no:Adele (sangerinne)]]
+[[nn:Adele Adkins]]
+[[ps:اډېل]]
+[[pl:Adele]]
+[[pt:Adele (cantora)]]
+[[ro:Adele]]
+[[ru:Адель (певица)]]
+[[sq:Adele]]
+[[simple:Adele]]
+[[sk:Adele]]
+[[sr:Адел]]
+[[fi:Adele (laulaja)]]
+[[sv:Adele (sångare)]]
+[[ta:அடெல் (பாடகி)]]
+[[th:อะเดล (นักร้อง)]]
+[[tr:Adele]]
+[[uk:Адель (співачка)]]
+[[vi:Adele (ca sĩ)]]
+[[zh:愛黛兒]]
