*Empty MediaWiki Message*

--- a/ᎠᏕᎵ.mw
+++ b/ᎠᏕᎵ.mw
@@ -31,7 +31,7 @@
 [[de:Adele (Sängerin)]]
 [[et:Adele]]
 [[el:Αντέλ]]
-[[en:Adele (singer)
+[[en:Adele (singer)]]
 [[es:Adele]]
 [[eo:Adele (kantistino)]]
 [[eu:Adele (abeslaria)]]
