*Empty MediaWiki Message*

--- a/ᏗᎦᎭᎵ.mw
+++ b/ᏗᎦᎭᎵ.mw
@@ -138,7 +138,7 @@ Many, see [[Lizard#Classification|ᏓᎵᏍᏛ]].
 [[jv:Kadhal]]
 [[ka:ხვლიკისნაირნი]]
 [[kk:Кесірткелер]]
-[[ko:도마뱀]]
+[[ko:도마뱀아목]]
 [[la:Lacertilia]]
 [[li:Herdisse]]
 [[lt:Driežai]]
@@ -168,7 +168,7 @@ Many, see [[Lizard#Classification|ᏓᎵᏍᏛ]].
 [[sr:Гуштер]]
 [[sv:Ödlor]]
 [[szl:Jaszczurki]]
-[[ta:பல்லி]]
+[[ta:பல்லியோந்திகள்]]
 [[te:బల్లి]]
 [[th:อันดับย่อยกิ้งก่า]]
 [[uk:Ящірки]]
