--- a/ᎡᏏᏱ.mw
+++ b/ᎡᏏᏱ.mw
@@ -62,7 +62,7 @@
 * [[Qatar|ᏆᏔᎵ]]
 * [[Saudi Arabia]]
 * [[Syria|ᏏᎵᏱ]]
-* ᎢᎦᏛ [[Turkey]]
+* [[Turkey|ᎬᏂᏱ]]
 * [[United Arab Emirates]]
 * [[Yemen|ᏰᎺᏂ]]
 * ᎢᎦᏛ [[Egypt|ᎢᏥᏈᏱ]]
