*Empty MediaWiki Message*

--- a/ᎧᏎᎧᏍᏕᏂ.mw
+++ b/ᎧᏎᎧᏍᏕᏂ.mw
@@ -14,7 +14,7 @@
 
 <big>'''ᎧᏌᎩᏍᏔᏂ'''</big> ᏙᏱᏗᏢ ᎦᏚᎲ [[ᎡᏏᏱ|ᎡᏏᏲᎢ]].
 
-== ==
+== ᏗᏓᏟᎶᏍᏔᏅ ==
 <gallery>
 File:Kazakhyurt.jpg|[[ᎧᏌᎩ ᎦᎵᏦᏕ]] <br> Киіз үй ''(Юрта)''
 File:200_tenge_front_small.jpg|[[ᎧᏌᎩ ᎠᏕᎳ]] <br> Қазақстан теңгесі ''(Казахстанский тенге)''
