--- a/ᎩᎵᏣᎢᏍ.mw
+++ b/ᎩᎵᏣᎢᏍ.mw
@@ -8,7 +8,7 @@
 | ᎠᏰᎵᎤ ᎤᏒᎧᎵ ᎦᏬᏂᏏᏍᏗ = [[ᎬᎩᏏ ᎦᏬᏂᎯᏍᏗ|ᎬᎩᏏ]] <br> [[ᏲᏂᏱ ᎦᏬᏂᎯᏍᏗ|ᏲᏂᏱ]]
 | ᎠᏰᎵ ᏗᎦᎳᏫᎢᏍᏗ = [[Bishkek|ᏈᏍᎨᎩ]]
 | ᎤᏔᏂᎢᏍᏗ ᎦᏚᎲᎢ = ᏈᏍᎨᎩ
-| ᏚᎬᏫᏳᎯ ᏂᎰᏂ = [[ᎠᎵᎹᏍᏇᎩ ᏌᏎᏃᏫᏥ ᎠᏔᎻᏆᏰᏫ]] <br> <small>Алмазбек Шаршенович Атамбаев<br> <small>''(Almazbek Sharshenovich Atambayev)''</small> <br> [[ᎣᎽᏇᎩ ᏙᎩᏙᎫᎶᏫᏥ ᏆᏆᏃᏫ]] <br> <small>Өмүрбек Токтогулович Бабанов<br> <small>''(Omurbek Toktogulovich Babanov)''</small> <br> [[ᎠᏏᎵᏇᎩ ᏤᎡᏂᏇᎪᏫ]] <br> <small>Асылбек Жеенбеков<br> <small>''(Asylbek Jêênbekov)''</small>
+| ᏚᎬᏫᏳᎯ ᏂᎰᏂ = [[ᎠᎵᎹᏍᏇᎩ ᏌᏎᏃᏫᏥ ᎠᏔᎻᏆᏰᏫ]] <br> <small>Алмазбек Шаршенович Атамбаев <br> ''(Almazbek Sharshenovich Atambayev)''</small> <br> [[ᎣᎽᏇᎩ ᏙᎩᏙᎫᎶᏫᏥ ᏆᏆᏃᏫ]] <br> <small>Өмүрбек Токтогулович Бабанов <br> ''(Omurbek Toktogulovich Babanov)''</small> <br> [[ᎠᏏᎵᏇᎩ ᏤᎡᏂᏇᎪᏫ]] <br> <small>Асылбек Жеенбеков <br> ''(Asylbek Jêênbekov)''</small>
 | ᎠᏕᎳ = [[ᎬᎩᏏ ᎠᏕᎳ]]
 }}
 
@@ -16,7 +16,7 @@
 
 == ᏗᏓᏟᎶᏍᏔᏅ ==
 <gallery>
-File:KyrgyzstanP15-1Som-1999(2000)_a.jpg|[[ᎬᎩᏏ ᎠᏕᎳ]] <br> Кыргыз сом ''(Киргизский сом)''
+File:KyrgyzstanP15-1Som-1999(2000)_a.jpg|[[ᎬᎩᏏ ᎠᏕᎳ]] <br> Кыргыз сом <br>''(Киргизский сом)''
 File:Киргизские_кибитки_на_реке_Чу.jpg|[[ᎬᎩᏏ ᎦᎵᏦᏕ]] <br> Боз үй ''(Кибитка)''
 File:Beschbarmak.jpg|[[ᎬᎩᏏ ᎠᎵᏍᏓᏴᏗ]]
 </gallery>
