*Empty MediaWiki Message*

--- a/ᎹᏂᎪᎵᎠ.mw
+++ b/ᎹᏂᎪᎵᎠ.mw
@@ -12,12 +12,12 @@
 | ᎠᏕᎳ = [[ᎼᏂᎪᎵ ᎠᏕᎳ]]
 }}
 
-<big>'''ᏔᏥᎩᏍᏔᏂ'''</big> ᏙᏱᏗᏢ ᎦᏚᎲ [[ᎡᏏᏱ|ᎡᏏᏲᎢ]].
+<big>'''ᎼᏂᎪᎵᏱ'''</big> ᏙᏱᏗᏢ ᎦᏚᎲ [[ᎡᏏᏱ|ᎡᏏᏲᎢ]].
 
 == ᏗᏓᏟᎶᏍᏔᏅ ==
 <gallery>
 File:UlaanBaatar-2009.jpg|[[ᎤᎳᏂᏆᏔ]] <br> Ulan Bator
-File:Tugrik.gif|[[ᎼᏂᎪᎵ ᎠᏕᎳ]] <br> Монгол төгрөг
+File:10000_Tugriks_-_Recto.jpg|[[ᎼᏂᎪᎵ ᎠᏕᎳ]] <br> Монгол төгрөг
 File:MongolianStew01.JPG|[[ᎼᏂᎪᎵ ᎠᎵᏍᏓᏴᏗ]]
 </gallery>
 
