/* ᏓᎶᏂᎦᏍᏛ ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ ᏙᎪᏪᎸ */

--- a/ᎡᏏᏱ.mw
+++ b/ᎡᏏᏱ.mw
@@ -15,7 +15,7 @@
 * [[Macau]]
 * [[Mongolia|ᎹᏂᎪᎵᏱ]]
 * [[North Korea]]
-* [[China|ᏓᎶᏂᎨᏍᏛ]]
+* [[China|ᏥᎾ]]
 * [[ᎤᎦᎾᏭ ᎢᏗᎵ ᎪᎴᎠ]] <!-- south korea -->
 * [[Taiwan|ᏔᎢᏩᏂ]]
 
