*Empty MediaWiki Message*

--- a/ᏥᎾ.mw
+++ b/ᏥᎾ.mw
@@ -1,16 +1,25 @@
-<table border=1 cellspacing=0 cellpadding=0 align=right>
- <tr>  
-  <td>[[File:LocationPRChina.png|235px|]]</td>
-  <td>[[File:Flag of the People's Republic of China.svg|163px|]]</td>
- <tr>
-  <td colspan=2>[[File:Ch-map.png|400px|]]</td>
-</table>
-'''ᏥᎾ''' ᏙᏱᏗᏢ ᎦᏚᎲ ᎧᎸᎬᎢᏗᏢ [[ᎠᏏᎠ|ᎠᏏᏲᎢ]].
+{{Infobox Country
+| Name = ᏥᎾ
+| Long name = 中华人民共和国 <br> ''Zhōnghuá Rénmín Gònghéguó''
+| ᎦᏓᏘ = Flag_of_the_People's_Republic_of_China.svg
+| Coat of arms = National_Emblem_of_the_People's_Republic_of_China.svg
+| Location = People's_Republic_of_China_(orthographic_projection).svg
+| size=200px
+| ᎠᏰᎵᎤ ᎤᏒᎧᎵ ᎦᏬᏂᏏᏍᏗ = [[ᏥᎾ ᎦᏬᏂᎯᏍᏗ|ᏥᎾ]]
+| ᎠᏰᎵ ᏗᎦᎳᏫᎢᏍᏗ = [[Beijing|ᏇᎢᏥᏂ]]
+| ᎤᏔᏂᎢᏍᏗ ᎦᏚᎲᎢ = [[Shanghai|ᏌᏂᎭᎢ]]
+| ᏚᎬᏫᏳᎯ ᏂᎰᏂ = [[Ꮁ ᏥᏂᏔᎣ]] <br> <small>胡锦涛 <br> ''(Hú Jǐntāo)''</small> <br> [[Ꮽ ᏆᏂᏉ]] <br> <small>吴邦国 <br> ''(Wú Bāngguó)''</small> <br> [[ᏪᏂ ᏥᎠᏆᎣ]] <br> <small>温家宝 <br> ''(Wen Jiabao)''</small>  <br> [[ᏥᎠ ᏥᏂᎵᏂ]] <br> <small>贾庆林 <br> ''(Jiǎ Qìnglín)''</small>
+| ᎠᏕᎳ = [[ᏥᎾ ᎠᏕᎳ]]
+}}
 
-{{stub}}
+<big>'''ᎼᏂᎪᎵᏱ'''</big> ᏙᏱᏗᏢ ᎦᏚᎲ [[ᎡᏏᏱ|ᎡᏏᏲᎢ]].
 
-[[Category:ᏓᎶᏂᎦᏍᏛ]]
-[[Category:ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ]]
+== ᏗᏓᏟᎶᏍᏔᏅ ==
+<gallery>
+File:Beijing_montage.png|[[ᏇᎢᏥᏂ]]
+File:Yuan_collection.jpg|[[ᏥᎾ ᎠᏕᎳ]]
+File:MongolianStew01.JPG|[[ᎼᏂᎪᎵ ᎠᎵᏍᏓᏴᏗ]]
+</gallery>
 
 [[ab:Ачынҭатәи Ажәлартә Республика]]
 [[ace:Rèpublik Rakyat Cina]]
