*Empty MediaWiki Message*

--- a/ᏲᏂᎢ.mw
+++ b/ᏲᏂᎢ.mw
@@ -1,24 +1,27 @@
 {{Infobox Country
 | Long name = Российская Федерация
-| Name = ᏲᏂᎢ
+| Name = ᏲᏂᏱ
 | ᎦᏓᏘ = Flag of Russia.svg
 | Coat of arms = Coat of Arms of the Russian Federation.svg
 | Location = Russian Federation (orthographic projection).svg
 | Area = 17,075,400 km2
 | Population = 145,166,731
 | Population year = 2002
-| ᎠᏰᎵᎤ ᎤᏒᎧᎵ ᎦᏬᏂᏏᏍᏗ = [[ᏲᏂᎢ ᎦᏬᏂᏏᏍᏗ]] 
+| ᎠᏰᎵᎤ ᎤᏒᎧᎵ ᎦᏬᏂᏏᏍᏗ = [[ᏲᏂᏱ ᎦᏬᏂᎯᏍᏗ|ᏲᏂᏱ]]
 | ᎠᏰᎵ ᏗᎦᎳᏫᎢᏍᏗ = [[Moscow|ᎹᏍᎪ]]
 | ᎤᏔᏂᎢᏍᏗ ᎦᏚᎲᎢ = [[Moscow|ᎹᏍᎪ]]
-| ᏚᎬᏫᏳᎯ ᏂᎰᏂ = 
-| ᎠᏕᎳ = ᏲᏂᎢ ᎠᏕᎳ
+| ᏚᎬᏫᏳᎯ ᏂᎰᏂ = [[ᏗᎻᏟ ᎺᏗᏪᏕᏫ|ᏗᎻᏟ ᎠᎾᏙᎵᏰᏫᏥ ᎺᏗᏪᏕᏫ]] <br> <small>Дми́трий Анато́льевич Медве́дев <br> ''(Dmitriy Anatolyevich Medvedev)''</small> <br> [[ᏩᎳᏗᎻᎠ ᏊᏘᏂ|ᏩᎳᏗᎻᎠ ᏩᎳᏗᎻᎶᏫᏥ ᏊᏘᏂ]] <br> <small>Влади́мир Влади́мирович Пу́тин <br> ''(Vladimir Vladimirovich Putin)''</small>
+| ᎠᏕᎳ = ᏲᏂᏱ ᎠᏕᎳ
 }}
 
-'''ᏲᏂᎢ''' ᏙᏱᏗᏢ ᎦᏚᎲ ᎧᎸᎬᎢᏗᏢ [[ᏳᎳᏛ]].
-ᏙᏱᏗᏢ ᎦᏚᎲ [[ᏳᎳᏛ]] ᎠᎴ [[ᏓᎶᏂᎦᏍᏛ]]-Ꭿ. ᏂᎬᎢ 17,075,400 km<sup>2</sup>. ᎾᏂᎥ ᏴᏫ 142,905,200<ref>[http://www.perepis-2010.ru/message-rosstat.php Russian Census 2010]</ref> ᎠᏰᎵ ᏗᎦᎳᏫᎢᏍᏗ ᎦᏚᎲᎢ [[Moscow|ᎹᏍᎪ]].
+<big>'''ᏲᏂᏱ'''</big> ᏙᏱᏗᏢ ᎦᏚᎲ [[ᏳᎳᏈ|ᏳᎳᏉᎢ]] ᎠᎴ [[ᎡᏏᏱ|ᎡᏏᏲᎢ]].
 
-== ᏓᏓᏚᎬ ᎪᏪᎵ ==
-<references/>
+== ᏗᏓᏟᎶᏍᏔᏅ ==
+<gallery>
+File:RedSquare_(pixinn.net).jpg|[[ᎬᏂᎨ ᏅᎩ ᏧᏅᏏᏯ]]
+File:Banknote_5000_rubles_(1997)_front.jpg|[[ᏲᏂᏱ ᎠᏕᎳ]]
+File:Schi.jpg|[[ᏲᏂᏱ ᎠᎵᏍᏓᏴᏗ]]
+</gallery>
 
 [[Category:ᏓᎶᏂᎦᏍᏛ]]
 [[Category:ᏳᎳᏛ]]
