/* ᎤᎦᎾ ᏭᎧᎸᎬ ᎢᏗᏢ ᏗᏕᎬᏔᏛ */

--- a/ᎡᏏᏱ.mw
+++ b/ᎡᏏᏱ.mw
@@ -29,7 +29,7 @@
 * [[Indonesia|ᎢᏂᏙᏂᏏᏯ]]
 * [[Laos|ᎳᎣᏍ]]
 * [[Malaysia|ᎹᎴᎢᏏᎠ]]
-* [[Philipines|ᎠᏂᏈᎵᎢ]]
+* [[Philipines|ᏈᎵᎩᏱ]]
 * [[Singapore|ᏏᏂᎦᏉᎠ]]
 * [[Thailand|ᏔᎢᎳᎾᏗ]]
 * [[Vietnam|ᏫᎡᏘᎾᎻ]]
