*Empty MediaWiki Message*

--- a/ᏳᎳᏛ.mw
+++ b/ᏳᎳᏛ.mw
@@ -13,7 +13,7 @@
 * [[Estonia|ᎡᏍᏙᏂᏱ]]
 * [[Belarus|ᏇᎳᎷᏏ]]
 * [[Belgium|ᏇᎵᏥᏱ]]
-* [[Bosnia ᎠᎴ Herzegovina|ᏉᏍᏂᏱ ᎠᎴ ᎲᏎᎪᏫᎾ]]
+* [[Bosnia ᎠᎴ Herzegovina|ᏉᏍᏂᏱ ᎠᎴ ᎲᏤᎪᏫᎾ]]
 * [[Bulgaria|ᏊᎵᎨᎵᏱ]]
 * [[Croatia|ᏉᎡᏏᏱ]]
 * [[Cyprus|ᏌᏈ]]
