/* ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ ᏙᎪᏪᎸ */

--- a/ᏳᎳᏛ.mw
+++ b/ᏳᎳᏛ.mw
@@ -4,7 +4,7 @@
 [[File:LocationEurope.png|thumb|250px|ᏳᎳᏛ]]
 [[File:Europe satellite orthographic.jpg|thumb|350px|ᏗᏟᎶᏍᏔᏄ]]
 * [[Sweden|ᏍᏫᏕᏂ]]
-* [[Germany|ᎠᏂᏛᏥ]]
+* [[Germany|ᏛᏥᏱ]]
 * [[Albania|ᎠᎵᏆᏂᏱ]]
 * [[Andorra|ᎠᏂᏙᎳ]]
 * [[Armenia|ᎠᎺᏂᏱ]]
