/* ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ ᏙᎪᏪᎸ */

--- a/ᏳᎳᏛ.mw
+++ b/ᏳᎳᏛ.mw
@@ -5,7 +5,7 @@
 [[File:Europe satellite orthographic.jpg|thumb|350px|ᏗᏟᎶᏍᏔᏄ]]
 * [[Sweden|ᏍᏫᏕᏂ]]
 * [[Germany|ᏛᏥᏱ]]
-* [[Albania|ᎠᎵᏆᏂᏱ]]
+* [[Albania|ᎠᎵᏇᏂᏯ]]
 * [[Andorra|ᎠᏂᏙᎳ]]
 * [[Armenia|ᎠᎺᏂᏱ]]
 * [[Austria|ᎣᏍᏟᏱ]]
