*Empty MediaWiki Message*

--- a/ᎠᎵᏇᏂᏯ.mw
+++ b/ᎠᎵᏇᏂᏯ.mw
@@ -1,14 +1,18 @@
-'''ᎠᎸᏇᏂᏯ''' ᏙᏱᏗᏢ ᎦᏚᎲ ᎧᎸᎬᎢᏗᏢ [[ᏳᎳᏛ]].
+{{Infobox Country
+| Long name = Republika e Shqipërisë
+| Name = ᎠᎵᏇᏂᏯ
+| ᎦᏓᏘ = Flag_of_Albania.svg
+| Coat of arms = Albania_state_emblem.svg
+| Location = Europe-Albania.svg
+| ᎠᏰᎵᎤ ᎤᏒᎧᎵ ᎦᏬᏂᏏᏍᏗ = [[ᎠᎵᏇᏂᏯ ᎦᏬᏂᎯᏍᏗ|ᎠᎵᏇᏂᏯ]]
+| ᎠᏰᎵ ᏗᎦᎳᏫᎢᏍᏗ = [[Tirana|ᏘᎳᎾ]]
+| ᎤᏔᏂᎢᏍᏗ ᎦᏚᎲᎢ = ᏘᎳᎾ
+| ᏚᎬᏫᏳᎯ ᏂᎰᏂ = [[Bamir Topi|ᏆᎻᎠ ᏙᏈ]] <br> [[Sali Berisha|ᏌᎵ ᏇᎵᏌ]]
+| ᎠᏕᎳ = ᎠᎵᏇᏂᏯ ᎠᏕᎳ
+}}
 
-[[File:LocationAlbania.png]]
+<big>'''ᎠᎵᏇᏂᏯ'''</big> ᏙᏱᏗᏢ ᎦᏚᎲ [[ᏳᎳᏈ|ᏳᎳᏉᎢ]].
 
-[[File:Satellite image of Albania in June 2000.jpg|thumb|ᏗᏟᎶᏍᏔᏄ]]
-
-{{stub}}
-
-[[Category:ᏳᎳᏛ]]
-[[Category:ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ]]
-[[Category:Questionably transliterated titles]]
 
 [[ab:Арнауыҭтәыла]]
 [[ace:Albania]]
