*Empty MediaWiki Message*

--- a/ᎠᏂᏙᎳ.mw
+++ b/ᎠᏂᏙᎳ.mw
@@ -1,6 +1,6 @@
 {{Infobox Country
 | Long name = Andorra
-| Name = ᎠᏅᏙᎳ
+| Name = ᎠᏂᏙᎳ
 | ᎦᏓᏘ = Flag of Andorra.svg
 | Coat of arms = Coat of arms of Andorra.svg
 | Location = Location Andorra Europe.png
@@ -8,19 +8,13 @@
 | Population = 107,000,000
 | Population year = 
 | ᎠᏰᎵᎤ ᎤᏒᎧᎵ ᎦᏬᏂᏏᏍᏗ = [[ᎧᏔᎳ]] 
-| ᎠᏰᎵ ᏗᎦᎳᏫᎢᏍᏗ = Andorra la Vella
-| ᎤᏔᏂᎢᏍᏗ ᎦᏚᎲᎢ = Andorra la Vella
+| ᎠᏰᎵ ᏗᎦᎳᏫᎢᏍᏗ = [[ᎠᏅᏙᎳ-Ꮃ-ᏪᎳ]]
+| ᎤᏔᏂᎢᏍᏗ ᎦᏚᎲᎢ = ᎠᏅᏙᎳ-Ꮃ-ᏪᎳ
 | ᏚᎬᏫᏳᎯ ᏂᎰᏂ = Giorgio Napolitano
 | ᎠᏕᎳ = ᎡᎶ
 }}
 
-'''ᎠᏅᏙᎳ''' ᏙᏱᏗᏢ ᎦᏚᎲ ᎧᎸᎬᎢᏗᏢ [[ᏳᎳᏛ]].
-
-{{stub}}
-
-[[Category:ᏳᎳᏛ]]
-[[Category:ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ]]
-[[Category:Questionably transliterated titles]]
+'''ᎠᏂᏙᎳ''' ᏙᏱᏗᏢ ᎦᏚᎲ [[ᏳᎳᏈ|ᏳᎳᏉᎢ]].
 
 [[ace:Andorra]]
 [[af:Andorra]]
