*Empty MediaWiki Message*

--- a/ᎠᏂᏙᎳ.mw
+++ b/ᎠᏂᏙᎳ.mw
@@ -10,8 +10,8 @@
 | ᎠᏰᎵᎤ ᎤᏒᎧᎵ ᎦᏬᏂᏏᏍᏗ = [[ᎧᏔᎳ]] 
 | ᎠᏰᎵ ᏗᎦᎳᏫᎢᏍᏗ = [[ᎠᏅᏙᎳ-Ꮃ-ᏪᎳ]]
 | ᎤᏔᏂᎢᏍᏗ ᎦᏚᎲᎢ = ᎠᏅᏙᎳ-Ꮃ-ᏪᎳ
-| ᏚᎬᏫᏳᎯ ᏂᎰᏂ = Giorgio Napolitano
-| ᎠᏕᎳ = ᎡᎶ
+| ᏚᎬᏫᏳᎯ ᏂᎰᏂ = [[Giorgio Napolitano|ᏣᏥᎣ ᎾᏉᎵᏔᏃ]]
+| ᎠᏕᎳ = [[ᏳᎳᏈ ᎠᏕᎳ]]
 }}
 
 '''ᎠᏂᏙᎳ''' ᏙᏱᏗᏢ ᎦᏚᎲ [[ᏳᎳᏈ|ᏳᎳᏉᎢ]].
