*Empty MediaWiki Message*

--- a/ᏙᎢᏥᏱ.mw
+++ b/ᏙᎢᏥᏱ.mw
@@ -8,7 +8,7 @@
 | ᎠᏰᎵ ᏗᎦᎳᏫᎢᏍᏗ = [[Berlin|ᏋᎵᏂ]]
 | ᎤᏔᏂᎢᏍᏗ ᎦᏚᎲᎢ = ᏋᎵᏂ
 | ᏚᎬᏫᏳᎯ ᏂᎰᏂ = [[Horst Seehofer|ᎰᏍᏘ ᏎᎰᏩ]] <br> [[Angela Merkel|ᎡᏂᏤᎳ ᎺᎨᎵ]] <br> [[Norbert Lammert|ᏃᏆᏘ ᎳᎹᏘ]]
-| ᎠᏕᎳ = ᏛᏥ ᎠᏕᎳ
+| ᎠᏕᎳ = [[ᏳᎳᏈ ᎠᏕᎳ]]
 }}
 
 <big>'''ᏛᏥᏱ'''</big> ᏙᏱᏗᏢ ᎦᏚᎲ [[ᏳᎳᏈ|ᏳᎳᏉᎢ]].
