/* ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ ᏙᎪᏪᎸ */

--- a/ᏳᎳᏛ.mw
+++ b/ᏳᎳᏛ.mw
@@ -8,7 +8,7 @@
 * [[Albania|ᎠᎵᏇᏂᏯ]]
 * [[Andorra|ᎠᏂᏙᎳ]]
 * [[Armenia|ᎠᎺᏂᏱ]]
-* [[Austria|ᎣᏍᏟᏱ]]
+* [[Austria|ᎣᏍᏟᏯ]]
 * [[Azerbaijan|ᎠᏌᏆᎢᏣᏂ]]
 * [[Estonia|ᎡᏍᏙᏂᏱ]]
 * [[Belarus|ᏇᎳᎷᏏ]]
