--- a/ᎠᏎᏆᏣᏂ.mw
+++ b/ᎠᏎᏆᏣᏂ.mw
@@ -1,7 +1,7 @@
 {{Infobox Country
-| Long name = Հայաստանի Հանրապետություն
+| Long name = Azərbaycan Respublikası
 | Name = ᎠᏌᏆᎢᏣᏂ
-| ᎦᏓᏘ = Azərbaycan Respublikası
+| ᎦᏓᏘ = Flag_of_Azerbaijan.svg
 | Coat of arms = Coat_of_arms_of_Azerbaijan.svg
 | Location = Azerbaijan_(orthographic_projection).svg
 | ᎠᏰᎵᎤ ᎤᏒᎧᎵ ᎦᏬᏂᏏᏍᏗ = [[ᎠᏌᏆᎢᏣᏂ ᎦᏬᏂᎯᏍᏗ]] 
@@ -12,3 +12,198 @@
 }}
 
 '''ᎠᏣᏆᎢᏣᏂ''' ᏙᏱᏗᏢ ᎦᏚᎲ [[ᏳᎳᏈ|ᏳᎳᏉᎢ]].
+
+[[ace:Azèrbaijan]]
+[[kbd:Азэрбиджан]]
+[[af:Azerbeidjan]]
+[[als:Aserbaidschan]]
+[[am:አዘርባይጃን]]
+[[ang:Azerbaijan]]
+[[ab:Азербаиџьан]]
+[[ar:أذربيجان]]
+[[an:Azerbaichán]]
+[[arc:ܐܙܪܒܝܓܐܢ]]
+[[roa-rup:Azerbaigian]]
+[[frp:Azèrbayidj·an]]
+[[ast:Azerbaixán]]
+[[av:Азарбижан]]
+[[az:Azərbaycan]]
+[[bn:আজারবাইজান]]
+[[zh-min-nan:Azerbaijan]]
+[[ba:Әзербайжан]]
+[[be:Азербайджан]]
+[[be-x-old:Азэрбайджан]]
+[[bcl:Aserbayhan]]
+[[bi:Azerbaijan]]
+[[bg:Азербайджан]]
+[[bar:Aserbaidschan]]
+[[bo:ཨ་ཛར་བཡི་ཇན།]]
+[[bs:Azerbejdžan]]
+[[br:Azerbaidjan]]
+[[ca:Azerbaidjan]]
+[[cv:Азербайджан]]
+[[ceb:Azerbaijan]]
+[[cs:Ázerbájdžán]]
+[[co:Azerbaighjan]]
+[[cy:Azerbaijan]]
+[[da:Aserbajdsjan]]
+[[de:Aserbaidschan]]
+[[dv:އަޒަރުބައިޖާން]]
+[[nv:Azééwii Bikéyah]]
+[[dsb:Azerbajdžan]]
+[[dz:ཨཛར་བཡེ་ཇན།]]
+[[et:Aserbaidžaan]]
+[[el:Αζερμπαϊτζάν]]
+[[en:Azerbaijan]]
+[[es:Azerbaiyán]]
+[[eo:Azerbajĝano]]
+[[ext:Azerbaiyán]]
+[[eu:Azerbaijan]]
+[[ee:Azerbaijan]]
+[[fa:جمهوری آذربایجان]]
+[[hif:Azerbaijan]]
+[[fo:Aserbadsjan]]
+[[fr:Azerbaïdjan]]
+[[fy:Azerbeidzjan]]
+[[ga:An Asarbaiseáin (tír)]]
+[[gv:Yn Asserbajaan]]
+[[gag:Azerbaycan]]
+[[gd:Asarbaideàn]]
+[[gl:Acerbaixán - Azərbaycan]]
+[[gu:અઝેરબીજાન]]
+[[hak:Â-set-pai-kiông]]
+[[xal:Азермудин Орн]]
+[[ko:아제르바이잔]]
+[[haw:‘Akepaikana]]
+[[hy:Ադրբեջանական Հանրապետություն]]
+[[hi:अज़रबैजान]]
+[[hsb:Azerbajdźan]]
+[[hr:Azerbajdžan]]
+[[io:Azerbaijan]]
+[[ilo:Azerbaijan]]
+[[bpy:আজারবাইজান]]
+[[id:Azerbaijan]]
+[[ia:Azerbaijan]]
+[[os:Азербайджан]]
+[[is:Aserbaídsjan]]
+[[it:Azerbaigian]]
+[[he:אזרבייג'ן]]
+[[jv:Azerbaijan]]
+[[kl:Aserbajdsjan]]
+[[kn:ಅಜೆರ್ಬೈಜಾನ್]]
+[[pam:Azerbaijan]]
+[[krc:Азербайджан]]
+[[ka:აზერბაიჯანი]]
+[[csb:Azerbejdżan]]
+[[kk:Әзірбайжан]]
+[[kw:Azerbayjan]]
+[[rw:Azeribayijani]]
+[[sw:Azerbaijan]]
+[[kv:Азербайджан]]
+[[kg:Azerbaidjan]]
+[[ht:Azerbaydjan]]
+[[ku:Azerbaycan]]
+[[ky:Азербайжан]]
+[[mrj:Азербайджан]]
+[[lad:Azerbaidjan]]
+[[lbe:Азирбижан]]
+[[ltg:Azerbaidžans]]
+[[la:Adrabigania]]
+[[lv:Azerbaidžāna]]
+[[lb:Aserbaidschan]]
+[[lt:Azerbaidžanas]]
+[[lij:Azerbaijan]]
+[[li:Azerbaidzjan]]
+[[ln:Azerbaïdjan]]
+[[lmo:Azerbaigian]]
+[[hu:Azerbajdzsán]]
+[[mk:Азербејџан]]
+[[ml:അസർബെയ്ജാൻ]]
+[[mt:Ażerbajġan]]
+[[mi:Atepaihānia]]
+[[mr:अझरबैजान]]
+[[xmf:აზერბაიჯანი]]
+[[arz:اذيربايجان]]
+[[mzn:آذربایجون]]
+[[ms:Azerbaijan]]
+[[mdf:Азербайджан]]
+[[mn:Азербайжан]]
+[[my:အဇာဘိုင်ဂျန်နိုင်ငံ]]
+[[nah:Azerbaiyan]]
+[[na:Aderbaidjan]]
+[[nl:Azerbeidzjan]]
+[[new:अजरबैजान]]
+[[ja:アゼルバイジャン]]
+[[ce:Азербайджан]]
+[[pih:Eserbeyjan]]
+[[no:Aserbajdsjan]]
+[[nn:Aserbajdsjan]]
+[[nov:Aserbaijan]]
+[[oc:Azerbaitjan]]
+[[mhr:Азербайджан]]
+[[or:ଆଜାରବାଇଜାନ୍]]
+[[uz:Ozarbayjon]]
+[[pnb:آذربائیجان]]
+[[ps:آزربایجان]]
+[[km:ប្រទេសអាហ្សែបៃហ្សង់]]
+[[pms:Aserbaigian]]
+[[nds:Aserbaidschan]]
+[[pl:Azerbejdżan]]
+[[pt:Azerbaijão]]
+[[kaa:A'zerbayjan]]
+[[crh:Azerbaycan]]
+[[ro:Azerbaidjan]]
+[[rm:Aserbeidschan]]
+[[qu:Asarsuyu]]
+[[rue:Азербайджан]]
+[[ru:Азербайджан]]
+[[sah:Азербайдьан]]
+[[se:Aserbaižan]]
+[[sm:Azerbaijin]]
+[[sa:अजर्बैजान]]
+[[sc:Azerbaigián]]
+[[sco:Azerbaijan]]
+[[stq:Aserbaidschan]]
+[[sq:Azerbajxhani]]
+[[scn:Azzirbaiggian]]
+[[simple:Azerbaijan]]
+[[ss:IZebajani]]
+[[sk:Azerbajdžan]]
+[[sl:Azerbajdžan]]
+[[cu:Аꙁѣрбаичанъ]]
+[[szl:Azerbejdżůn]]
+[[so:Aserbiijaan]]
+[[ckb:ئازەربایجان]]
+[[sr:Азербејџан]]
+[[sh:Azerbejdžan]]
+[[su:Azerbaijan]]
+[[fi:Azerbaidžan]]
+[[sv:Azerbajdzjan]]
+[[tl:Aserbayan]]
+[[ta:அசர்பைஜான்]]
+[[tt:Азәрбайҗан]]
+[[te:అజర్‌బైజాన్]]
+[[tet:Azerbaijaun]]
+[[th:ประเทศอาเซอร์ไบจาน]]
+[[tg:Озарбойҷон]]
+[[tr:Azerbaycan]]
+[[tk:Azerbaýjan]]
+[[udm:Азербайджан]]
+[[uk:Азербайджан]]
+[[ur:آذربائیجان]]
+[[ug:ئەزەربەيجان]]
+[[vep:Azerbaidžan]]
+[[za:Ahsibaigyangh]]
+[[vi:Azerbaijan]]
+[[vo:Lasärbäcän]]
+[[fiu-vro:Asõrbaidžaan]]
+[[vls:Azerbeidzjan]]
+[[war:Aserbaiyan]]
+[[wo:Aserbayjaan]]
+[[wuu:阿塞拜疆]]
+[[yi:אזערביידזשאן]]
+[[yo:Azerbaijan]]
+[[zh-yue:阿塞拜疆]]
+[[diq:Azerbaycan]]
+[[bat-smg:Azėrbaidžians]]
+[[zh:阿塞拜疆]]
