*Empty MediaWiki Message*

--- a/ᎠᏎᏆᏣᏂ.mw
+++ b/ᎠᏎᏆᏣᏂ.mw
@@ -1,6 +1,6 @@
 {{Infobox Country
 | Long name = Azərbaycan Respublikası
-| Name = ᎠᏌᏆᎢᏣᏂ
+| Name = ᎠᏎᏆᏣᏂ
 | ᎦᏓᏘ = Flag_of_Azerbaijan.svg
 | Coat of arms = Coat_of_arms_of_Azerbaijan.svg
 | Location = Azerbaijan_(orthographic_projection).svg
@@ -11,7 +11,7 @@
 | ᎠᏕᎳ = [[ᎠᏌᏆᎢᏣᏂ ᎠᏕᎳ]]
 }}
 
-'''ᎠᏣᏆᎢᏣᏂ''' ᏙᏱᏗᏢ ᎦᏚᎲ [[ᏳᎳᏈ|ᏳᎳᏉᎢ]].
+'''ᎠᏎᏆᏣᏂ''' ᏙᏱᏗᏢ ᎦᏚᎲ [[ᏳᎳᏈ|ᏳᎳᏉᎢ]].
 
 [[ace:Azèrbaijan]]
 [[kbd:Азэрбиджан]]
