*Empty MediaWiki Message*

--- a/ᏥᎾ.mw
+++ b/ᏥᎾ.mw
@@ -12,7 +12,7 @@
 | ᎠᏕᎳ = [[ᏥᎾ ᎠᏕᎳ]]
 }}
 
-<big>'''ᎼᏂᎪᎵᏱ'''</big> ᏙᏱᏗᏢ ᎦᏚᎲ [[ᎡᏏᏱ|ᎡᏏᏲᎢ]].
+<big>'''ᏥᎾ'''</big> ᏙᏱᏗᏢ ᎦᏚᎲ [[ᎡᏏᏱ|ᎡᏏᏲᎢ]].
 
 == ᏗᏓᏟᎶᏍᏔᏅ ==
 <gallery>
