*Empty MediaWiki Message*

--- a/ᏳᎧᎴᏂ.mw
+++ b/ᏳᎧᎴᏂ.mw
@@ -1,23 +1,23 @@
 {{Infobox Country
 | Long name = Российская Федерация
-| Name = ᏳᏇᏂᏱ
+| Name = ᏳᎧᏪᏂᏱ
 | ᎦᏓᏘ = Flag_of_Ukraine.svg
 | Coat of arms = Lesser_Coat_of_Arms_of_Ukraine.svg
 | Location = Europe-Ukraine.svg
-| ᎠᏰᎵᎤ ᎤᏒᎧᎵ ᎦᏬᏂᏏᏍᏗ = [[ᏳᏇᏂ ᎦᏬᏂᎯᏍᏗ|ᏳᏇᏂ]]
+| ᎠᏰᎵᎤ ᎤᏒᎧᎵ ᎦᏬᏂᏏᏍᏗ = [[ᏳᎧᏪᏂ ᎦᏬᏂᎯᏍᏗ|ᏳᎧᏪᏂ]]
 | ᎠᏰᎵ ᏗᎦᎳᏫᎢᏍᏗ = [[Kiev|ᎩᏰᏫ]]
 | ᎤᏔᏂᎢᏍᏗ ᎦᏚᎲᎢ = ᎩᏰᏫ
 | ᏚᎬᏫᏳᎯ ᏂᎰᏂ = [[ᏫᎩᏔ ᏯᏄᎪᏫᏥ|ᏫᎩᏔ ᏪᏙᎶᏫᏥ ᏯᏄᎪᏫᏥ]] <br> <small>Ві́ктор Фе́дорович Януко́вич <br> ''(Viktor Fedorovych Yanukovych)''</small> <br> [[ᎻᎪᎳ ᎠᏌᎶᏫ|ᎻᎪᎳ ᏯᏃᏫᏥ ᎠᏌᎶᏫ]] <br> <small>Мико́ла Я́нович Аза́ров <br> ''(Mykola Yanovych Azarov)''</small> <br> [[ᏬᎶᏗᎻᎠ ᎵᏘᏫᏂ|ᏬᎶᏗᎻᎠ ᎻᎨᎶᏫᏥ ᎵᏘᏫᏂ]] <br> <small>Володимир Михайлович Литвин <br> ''(Volodymyr Mykhailovych Lytvyn)''</small>
-| ᎠᏕᎳ = ᏳᏇᏂ ᎠᏕᎳ
+| ᎠᏕᎳ = ᏳᎧᏪᏂ ᎠᏕᎳ
 }}
 
-<big>'''ᏳᏇᏂᏱ'''</big> ᏙᏱᏗᏢ ᎦᏚᎲ [[ᏳᎳᏈ|ᏳᎳᏉᎢ]].
+<big>'''ᏳᎧᏪᏂᏱ'''</big> ᏙᏱᏗᏢ ᎦᏚᎲ [[ᏳᎳᏈ|ᏳᎳᏉᎢ]].
 
 == ᏗᏓᏟᎶᏍᏔᏅ ==
 <gallery>
 File:Maidan_Nezalezhnosti_(Kiev).jpg|[[ᎩᏰᏫ]]
-File:100_hryvnia_2005_b.jpg|[[ᏳᏇᏂ ᎠᏕᎳ]]
-File:Borsch-ukr.jpg|[[ᏳᏇᏂ ᎩᎦᎨᎦᎳᏗᏍᎩ ᎤᎦᎹ]]
+File:100_hryvnia_2005_b.jpg|[[ᏳᎧᏪᏂ ᎠᏕᎳ]]
+File:Borsch-ukr.jpg|[[ᏳᎧᏪᏂ ᎩᎦᎨᎦᎳᏗᏍᎩ ᎤᎦᎹ]]
 </gallery>
 
 [[vep:Ukrain]]
