/* ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ ᏙᎪᏪᎸ */

--- a/ᏳᎳᏛ.mw
+++ b/ᏳᎳᏛ.mw
@@ -49,7 +49,7 @@
 * [[Slovenia|ᏍᎶᏪᏂ]]
 * [[Switzerland|ᏍᏫᏣᎳᎾᏗ]]
 * [[Turkey]]
-* [[Ukraine|ᏳᏇᏂ]]
+* [[Ukraine|ᏳᎧᏪᏂᏱ]]
 * [[Italy|ᏲᎶ]]
 * [[Russia|ᏲᏂᎢ]]
 
