--- a/ᏳᎧᎴᏂ.mw
+++ b/ᏳᎧᎴᏂ.mw
@@ -1,6 +1,6 @@
 {{Infobox Country
 | Long name = Российская Федерация
-| Name = ᏳᎧᏪᏂᏱ
+| Name = ᏳᎧᏪᏂ
 | ᎦᏓᏘ = Flag_of_Ukraine.svg
 | Coat of arms = Lesser_Coat_of_Arms_of_Ukraine.svg
 | Location = Europe-Ukraine.svg
@@ -11,7 +11,7 @@
 | ᎠᏕᎳ = ᏳᎧᏪᏂ ᎠᏕᎳ
 }}
 
-<big>'''ᏳᎧᏪᏂᏱ'''</big> ᏙᏱᏗᏢ ᎦᏚᎲ [[ᏳᎳᏈ|ᏳᎳᏉᎢ]].
+<big>'''ᏳᎧᏪᏂ'''</big> ᏙᏱᏗᏢ ᎦᏚᎲ [[ᏳᎳᏈ|ᏳᎳᏉᎢ]].
 
 == ᏗᏓᏟᎶᏍᏔᏅ ==
 <gallery>
