/* ᎤᎦᎾ ᏭᎧᎸᎬ ᎢᏗᏢ ᏗᏕᎬᏔᏛ */

--- a/ᎡᏏᏱ.mw
+++ b/ᎡᏏᏱ.mw
@@ -25,6 +25,7 @@
 === ᎤᎦᎾ ᏭᎧᎸᎬ ᎢᏗᏢ ᏗᏕᎬᏔᏛ ===
 * [[Brunei|ᏊᎾᎢ]]
 * [[Burma|ᏋᎹ]]
+* [[Cambodia|ᎨᎻᏉᏗᏯ]]
 * [[East Timor]]
 * [[Indonesia|ᎢᏂᏙᏂᏏᏯ]]
 * [[Laos|ᎳᎣᏍ]]
