--- a/ᎡᏏᏱ.mw
+++ b/ᎡᏏᏱ.mw
@@ -14,7 +14,7 @@
 * [[Japan|ᏣᏩᏂᏏ]]
 * [[Macau]]
 * [[Mongolia|ᎹᏂᎪᎵᏱ]]
-* [[North Korea]]
+* [[North Korea|ᎪᎵᏯ]]
 * [[China|ᏥᎾ]]
 * [[ᎤᎦᎾᏭ ᎢᏗᎵ ᎪᎴᎠ]] <!-- south korea -->
 * [[Taiwan|ᏔᎢᏩᏂ]]
