/* ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ ᏙᎪᏪᎸ */

--- a/ᏳᎳᏛ.mw
+++ b/ᏳᎳᏛ.mw
@@ -24,13 +24,13 @@
 * [[France|ᎦᎸᏥᏱ]]
 * [[Georgia|ᏣᏥᏱ]]
 * [[Greece|ᎠᏂᎪᎢ]]
-* [[Hungary|ᎲᎦᎵ]]
-* [[Iceland|ᎠᎢᏍᎳᎾᏗ]]
+* [[Hungary|ᎱᏂᎦᎵ]]
+* [[Iceland|ᎤᏁᏍᏓᎶᎢ]]
 * [[Ireland|ᎠᏯᎳᎾᏗ]]
 * [[Kazakhstan|ᎧᏌᎩᏍᏔᏂ]]
 * [[Latvia|ᎳᏘᏫᏱ]]
 * [[Liechtenstein|ᎵᎩᏖᏂᏍᏖᏂ]]
-* [[Lithuania|ᎵᏚᎡᏂᏱ]]
+* [[Lithuania|ᎵᏚᏪᏂᏱ]]
 * [[Luxembourg|ᎳᎦᏎᎻᏋᎩ]]
 * [[Macedonia|ᎹᏏᏙᏂ]]
 * [[Malta|ᎹᎵᏔ]]
@@ -38,19 +38,19 @@
 * [[Monaco|ᎼᎾᎪ]]
 * [[Montenegro|ᎼᏂᏖᏁᏉ]]
 * [[Netherlands]]
-* [[Norway|ᏃᏪᎢ]]
+* [[Norway|ᏃᏪᏱ]]
 * [[Poland|ᏉᎳᎾᏗ]]
-* [[Portugal|ᏉᏚᎦᎵ]]
+* [[Portugal|ᏉᏧᎦᎵ]]
 * [[Romania|ᎶᎺᏂᏱ]]
 * [[Spain|ᏍᏆᏂ]]
 * [[San Marino]]
 * [[Serbia|ᏒᏈᏱ]]
 * [[Slovakia|ᏍᎶᏩᎩᏱ]]
-* [[Slovenia|ᏍᎶᏪᏂ]]
+* [[Slovenia|ᏍᎶᏪᏂᏱ]]
 * [[Switzerland|ᏍᏫᏣᎳᎾᏗ]]
-* [[Turkey]]
+* [[Turkey|ᎬᏂᏱ]]
 * [[Ukraine|ᏳᎧᏪᏂᏱ]]
-* [[Italy|ᏲᎶ]]
+* [[Italy|ᎬᏩᎵᏲᏥ (ᎢᏓᎵ)]]
 * [[Russia|ᏲᏂᎢ]]
 
 <div align="left">{{ᎡᎶᏆ}}</div>
