*Empty MediaWiki Message*

--- a/ᏳᎳᏛ.mw
+++ b/ᏳᎳᏛ.mw
@@ -17,7 +17,7 @@
 * [[Bulgaria|ᏊᎵᎨᎵᏱ]]
 * [[Croatia|ᏉᎡᏏᏱ]]
 * [[Cyprus|ᏌᏈ]]
-* [[Czech Republic]]
+* [[Czech Republic|ᏤᎩᏱ]]
 * [[Denmark|ᏕᏂᎹᎩ]]
 * [[Finland|ᏫᏂᎴᏂᏗ]]
 * [[United Kingdom|ᎩᎵᏏᏲ]]
@@ -37,7 +37,7 @@
 * [[Moldova|ᎼᎵᏙᏩ]]
 * [[Monaco|ᎼᎾᎪ]]
 * [[Montenegro|ᎼᏂᏖᏁᏉ]]
-* [[Netherlands]]
+* [[Netherlands|ᏛᏥᏱ]]
 * [[Norway|ᏃᏪᏱ]]
 * [[Poland|ᏉᎳᎾᏗ]]
 * [[Portugal|ᏉᏧᎦᎵ]]
