*Empty MediaWiki Message*

--- a/ᏙᎢᏥᏱ.mw
+++ b/ᏙᎢᏥᏱ.mw
@@ -1,14 +1,14 @@
 {{Infobox Country
 | Long name = Bundesrepublik Deutschland
-| Name = ᏛᏥᏱ
+| Name = ᏙᎢᏥᏱ
 | ᎦᏓᏘ = Flag_of_Germany.svg
 | Coat of arms = Coat_of_Arms_of_Germany.svg
 | Location = EU-Germany.svg
-| ᎠᏰᎵᎤ ᎤᏒᎧᎵ ᎦᏬᏂᏏᏍᏗ = [[ᏛᏥ ᎦᏬᏂᎯᏍᏗ|ᏛᏥ]]
+| ᎠᏰᎵᎤ ᎤᏒᎧᎵ ᎦᏬᏂᏏᏍᏗ = [[ᏙᎢᏥ ᎦᏬᏂᎯᏍᏗ|ᏙᎢᏥ]]
 | ᎠᏰᎵ ᏗᎦᎳᏫᎢᏍᏗ = [[Berlin|ᏋᎵᏂ]]
 | ᎤᏔᏂᎢᏍᏗ ᎦᏚᎲᎢ = ᏋᎵᏂ
 | ᏚᎬᏫᏳᎯ ᏂᎰᏂ = [[Horst Seehofer|ᎰᏍᏘ ᏎᎰᏩ]] <br> [[Angela Merkel|ᎡᏂᏤᎳ ᎺᎨᎵ]] <br> [[Norbert Lammert|ᏃᏆᏘ ᎳᎹᏘ]]
 | ᎠᏕᎳ = [[ᏳᎳᏈ ᎠᏕᎳ]]
 }}
 
-<big>'''ᏛᏥᏱ'''</big> ᏙᏱᏗᏢ ᎦᏚᎲ [[ᏳᎳᏈ|ᏳᎳᏉᎢ]].
+<big>'''ᏙᎢᏥᏱ'''</big> ᏙᏱᏗᏢ ᎦᏚᎲ [[ᏳᎳᏈ|ᏳᎳᏉᎢ]].
