*Empty MediaWiki Message*

--- a/ᎾᏍᎩ_ᏁᏛᎳᏂ.mw
+++ b/ᎾᏍᎩ_ᏁᏛᎳᏂ.mw
@@ -1,1 +1,14 @@
-#REDIRECT [[ᏙᎢᏥᏱ]]
+{{Infobox Country
+| Long name = Nederland
+| Name = ᏛᏥᏱ
+| ᎦᏓᏘ = Flag_of_the_Netherlands.svg
+| Coat of arms = Coat_of_arms_of_the_Netherlands_-_02.svg
+| Location = EU-Netherlands.svg
+| ᎠᏰᎵᎤ ᎤᏒᎧᎵ ᎦᏬᏂᏏᏍᏗ = [[ᏛᏥ ᎧᏬᏂᎯᏍᏗ|ᏛᏥ]]
+| ᎠᏰᎵ ᏗᎦᎳᏫᎢᏍᏗ = [[Amsterdam|ᎠᎻᏍᏔᏓᎻ]]
+| ᎤᏔᏂᎢᏍᏗ ᎦᏚᎲᎢ = ᎠᎻᏍᏔᏓᎻ
+| ᏚᎬᏫᏳᎯ ᏂᎰᏂ = [[Beatrix der Nederlanden|ᏈᎠᏟᏏ ᎠᏛᏥ]] <br> [[Mark Rutte|ᎹᎦ ᎷᏖ]] <br> [[Maxime Verhagen|ᎺᎩᏏᎻ ᏪᎭᎨᏂ]]
+| ᎠᏕᎳ = [[ᏳᎳᏈ ᎠᏕᎳ]]
+}}
+
+<big>'''ᏛᏥᏱ'''</big> ᏙᏱᏗᏢ ᎦᏚᎲ [[ᏳᎳᏈ|ᏳᎳᏉᎢ]].
