--- a/ᏍᏫᏕᏂ.mw
+++ b/ᏍᏫᏕᏂ.mw
@@ -12,3 +12,221 @@
 }}
 
 <big>'''ᏍᏫᏕᏂ'''</big> ᏙᏱᏗᏢ ᎦᏚᎲ [[ᏳᎳᏈ|ᏳᎳᏉᎢ]].
+
+[[ace:Swèdia]]
+[[kbd:Шуэц]]
+[[af:Swede]]
+[[ak:Sweden]]
+[[als:Schweden]]
+[[am:ስዊድን]]
+[[ang:Sƿēoland]]
+[[ab:Швециа]]
+[[ar:السويد]]
+[[an:Suecia]]
+[[arc:ܣܘܝܕ]]
+[[roa-rup:Suidia]]
+[[frp:Suède]]
+[[ast:Suecia]]
+[[gn:Suesia]]
+[[az:İsveç]]
+[[bm:Swedi]]
+[[bn:সুইডেন]]
+[[zh-min-nan:Sverige]]
+[[be:Швецыя]]
+[[be-x-old:Швэцыя]]
+[[bcl:Suesya]]
+[[bi:Sweden]]
+[[bg:Швеция]]
+[[bar:Schwedn]]
+[[bo:སི་ཝེ་དེན།]]
+[[bs:Švedska]]
+[[br:Sveden]]
+[[ca:Suècia]]
+[[cv:Швеци]]
+[[ceb:Sweden]]
+[[cs:Švédsko]]
+[[co:Svezia]]
+[[cy:Sweden]]
+[[da:Sverige]]
+[[de:Schweden]]
+[[dv:ސުވިޑަން]]
+[[dsb:Šwedska]]
+[[dz:སུའི་ཌན་]]
+[[et:Rootsi]]
+[[el:Σουηδία]]
+[[en:Sweden]]
+[[myv:Швеция Мастор]]
+[[es:Suecia]]
+[[eo:Svedio]]
+[[ext:Suécia]]
+[[eu:Suedia]]
+[[ee:Sweden]]
+[[fa:سوئد]]
+[[hif:Sweden]]
+[[fo:Svøríki]]
+[[fr:Suède]]
+[[fy:Sweden]]
+[[fur:Svezie]]
+[[ga:An tSualainn]]
+[[gv:Yn Toolynn]]
+[[gag:Şvețiya]]
+[[gd:An t-Suain]]
+[[gl:Suecia - Sverige]]
+[[gan:瑞典]]
+[[gu:સ્વિડન]]
+[[got:𐍃𐍅𐌴𐌰𐍂𐌴𐌹𐌺𐌹]]
+[[hak:Shuì-tién]]
+[[xal:Сведин Нутг]]
+[[ko:스웨덴]]
+[[haw:Kuekene]]
+[[hy:Շվեդիա]]
+[[hi:स्वीडन]]
+[[hsb:Šwedska]]
+[[hr:Švedska]]
+[[io:Suedia]]
+[[ilo:Suésia]]
+[[bpy:সুইডেন]]
+[[id:Swedia]]
+[[ia:Svedia]]
+[[ie:Svedia]]
+[[iu:ᔅᕗᕆᑭ]]
+[[os:Швеци]]
+[[zu:ISwidi]]
+[[is:Svíþjóð]]
+[[it:Svezia]]
+[[he:שבדיה]]
+[[jv:Swédia]]
+[[kl:Sverige]]
+[[kn:ಸ್ವೀಡನ್]]
+[[pam:Sweden]]
+[[krc:Швеция]]
+[[ka:შვედეთი]]
+[[csb:Szwedzkô]]
+[[kk:Швеция]]
+[[kw:Swedherwyk]]
+[[rw:Suwede]]
+[[sw:Uswidi]]
+[[kv:Швеция]]
+[[kg:Suedi]]
+[[ht:Syèd]]
+[[ku:Swêd]]
+[[ky:Швеция]]
+[[lad:Suesia]]
+[[ltg:Švedeja]]
+[[la:Suecia]]
+[[lv:Zviedrija]]
+[[lb:Schweden]]
+[[lt:Švedija]]
+[[lij:Sveçia]]
+[[li:Zwede]]
+[[ln:Swédi]]
+[[jbo:sueriges]]
+[[lg:Swiiden]]
+[[lmo:Svezia]]
+[[hu:Svédország]]
+[[mk:Шведска]]
+[[mg:Soeda]]
+[[ml:സ്വീഡൻ]]
+[[mt:Żvezja]]
+[[mi:Huitene]]
+[[mr:स्वीडन]]
+[[xmf:შვედეთი]]
+[[arz:السويد]]
+[[mzn:سوئد]]
+[[ms:Sweden]]
+[[cdo:Sôi-diēng]]
+[[mdf:Шведмастор]]
+[[mn:Швед]]
+[[my:ဆွီဒင်နိုင်ငံ]]
+[[nah:Suecia]]
+[[na:Widen]]
+[[nl:Zweden]]
+[[nds-nl:Sveden]]
+[[ne:स्वीडेन]]
+[[new:स्वीडेन]]
+[[ja:スウェーデン]]
+[[nap:Sguezia]]
+[[ce:Швеци]]
+[[frr:Swärik]]
+[[pih:Swiiden]]
+[[no:Sverige]]
+[[nn:Sverige]]
+[[nrm:Suède]]
+[[nov:Suedia]]
+[[oc:Suècia]]
+[[mhr:Швеций]]
+[[or:ସ୍ଵିଡେନ]]
+[[uz:Shvetsiya]]
+[[pnb:سویڈن]]
+[[pap:Suecia]]
+[[ps:سويډن]]
+[[koi:Шведму]]
+[[km:ស៊ុយអែត]]
+[[pms:Svessia]]
+[[tpi:Suwidan]]
+[[nds:Sweden]]
+[[pl:Szwecja]]
+[[pnt:Σουηδία]]
+[[pt:Suécia]]
+[[kaa:Shvetsiya]]
+[[crh:İsveç]]
+[[ro:Suedia]]
+[[rm:Svezia]]
+[[qu:Suwidsuyu]]
+[[rue:Швеція]]
+[[ru:Швеция]]
+[[sah:Швеция]]
+[[se:Ruoŧŧa]]
+[[sm:Sweden]]
+[[sa:स्वीडन]]
+[[sc:Isvetzia]]
+[[sco:Swaden]]
+[[stq:Sweden]]
+[[sq:Suedia]]
+[[scn:Svezzia]]
+[[simple:Sweden]]
+[[ss:ISwideni]]
+[[sk:Švédsko]]
+[[sl:Švedska]]
+[[cu:Свєньско]]
+[[szl:Szwecyjo]]
+[[so:Iswiidhan]]
+[[ckb:سوید]]
+[[sr:Шведска]]
+[[sh:Švedska]]
+[[su:Swédia]]
+[[fi:Ruotsi]]
+[[sv:Sverige]]
+[[tl:Suwesya]]
+[[ta:சுவீடன்]]
+[[roa-tara:Svezzie]]
+[[tt:Швеция]]
+[[te:స్వీడన్]]
+[[tet:Suésia]]
+[[th:ประเทศสวีเดน]]
+[[tg:Шветсия]]
+[[tr:İsveç]]
+[[tk:Şwesiýa]]
+[[tw:Sweden]]
+[[udm:Швеция]]
+[[uk:Швеція]]
+[[ur:سویڈن]]
+[[ug:شۋېتسىيە]]
+[[vec:Svèsia]]
+[[vep:Ročinma]]
+[[vi:Thụy Điển]]
+[[vo:Svedän]]
+[[fiu-vro:Roodsi]]
+[[wa:Suwedwesse]]
+[[zh-classical:瑞典]]
+[[vls:Zweedn]]
+[[war:Suecia]]
+[[wo:Suweed]]
+[[wuu:瑞典]]
+[[yi:שוועדן]]
+[[yo:Swídìn]]
+[[zh-yue:瑞典]]
+[[diq:İswec]]
+[[zea:Zweden]]
+[[bat-smg:Švedėjė]]
+[[zh:瑞典]]
