/* ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ ᏙᎪᏪᎸ */

--- a/ᏳᎳᏛ.mw
+++ b/ᏳᎳᏛ.mw
@@ -9,7 +9,7 @@
 * [[Andorra|ᎠᏂᏙᎳ]]
 * [[Armenia|ᎠᎺᏂᏱ]]
 * [[Austria|ᎣᏍᏟᏯ]]
-* [[Azerbaijan|ᎠᏌᏆᎢᏣᏂ]]
+* [[Azerbaijan|ᎠᏎᏆᏣᏂ]]
 * [[Estonia|ᎡᏍᏙᏂᏱ]]
 * [[Belarus|ᏇᎳᎷᏏ]]
 * [[Belgium|ᏇᎵᏥᏱ]]
