/* ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ ᏙᎪᏪᎸ */

--- a/ᏳᎳᏛ.mw
+++ b/ᏳᎳᏛ.mw
@@ -13,7 +13,7 @@
 * [[Estonia|ᎡᏍᏙᏂᏱ]]
 * [[Belarus|ᏇᎳᎷᏏ]]
 * [[Belgium|ᏇᎵᏥᏱ]]
-* [[Bosnia ᎠᎴ Herzegovina|ᏉᏍᏂᏱ ᎠᎴ ᎲᏤᎪᏫᎾ]]
+* [[Bosnia & Herzegovina|ᏉᏍᏂᏱ ᎠᎴ ᎲᏤᎪᏫᎾ]]
 * [[Bulgaria|ᏊᎵᎨᎵᏱ]]
 * [[Croatia|ᏉᎡᏏᏱ]]
 * [[Cyprus|ᏌᏈ]]
@@ -23,9 +23,9 @@
 * [[United Kingdom|ᎩᎵᏏᏲ]]
 * [[France|ᎦᎸᏥᏱ]]
 * [[Georgia|ᏣᏥᏱ]]
-* [[Greece|ᎠᏂᎪᎢ]]
+* [[Greece|ᎪᎢ]]
 * [[Hungary|ᎱᏂᎦᎵ]]
-* [[Iceland|ᎤᏁᏍᏓᎶᎢ]]
+* [[Iceland|ᎤᏁᏍᏓᎶᎯ]]
 * [[Ireland|ᎠᏯᎳᎾᏗ]]
 * [[Kazakhstan|ᎧᏌᎩᏍᏔᏂ]]
 * [[Latvia|ᎳᏘᏫᏱ]]
